Added {.t('')} keys, ran parser for new keys, updated Ukrainian to v0.2.5.

--- a/src/lib/i18n/locales/ar-BH/translation.json
+++ b/src/lib/i18n/locales/ar-BH/translation.json
@@ -12,6 +12,7 @@
 	"a user": "مستخدم",
 	"About": "عن",
 	"Account": "الحساب",
+	"Account Activation Pending": "",
 	"Accurate information": "معلومات دقيقة",
 	"Active Users": "",
 	"Add": "أضف",
@@ -22,6 +23,7 @@
 	"Add custom prompt": "أضافة مطالبة مخصصه",
 	"Add Docs": "إضافة المستندات",
 	"Add Files": "إضافة ملفات",
+	"Add memory": "",
 	"Add Memory": "إضافة ذكرايات",
 	"Add message": "اضافة رسالة",
 	"Add Model": "اضافة موديل",
@@ -88,8 +90,10 @@
 	"Chunk Params": "Chunk المتغيرات",
 	"Chunk Size": "Chunk حجم",
 	"Citation": "اقتباس",
+	"Clear memory": "",
 	"Click here for help.": "أضغط هنا للمساعدة",
 	"Click here to": "أضغط هنا الانتقال",
+	"Click here to download user import template file.": "",
 	"Click here to select": "أضغط هنا للاختيار",
 	"Click here to select a csv file.": "أضغط هنا للاختيار ملف csv",
 	"Click here to select documents.": "انقر هنا لاختيار المستندات",
@@ -105,6 +109,7 @@
 	"Concurrent Requests": "الطلبات المتزامنة",
 	"Confirm Password": "تأكيد كلمة المرور",
 	"Connections": "اتصالات",
+	"Contact Admin for WebUI Access": "",
 	"Content": "الاتصال",
 	"Context Length": "طول السياق",
 	"Continue Response": "متابعة الرد",
@@ -122,6 +127,7 @@
 	"Create new secret key": "عمل سر جديد",
 	"Created at": "أنشئت في",
 	"Created At": "أنشئت من",
+	"CSV Import": "",
 	"Current Model": "الموديل المختار",
 	"Current Password": "كلمة السر الحالية",
 	"Custom": "مخصص",
@@ -207,12 +213,15 @@
 	"Error": "خطأ",
 	"Experimental": "تجريبي",
 	"Export": "تصدير",
+	"Export All Archived Chats": "",
 	"Export All Chats (All Users)": "تصدير جميع الدردشات (جميع المستخدمين)",
 	"Export chat (.json)": "",
 	"Export Chats": "تصدير جميع الدردشات",
 	"Export Documents Mapping": "تصدير وثائق الخرائط",
+	"Export LiteLLM config.yaml": "",
 	"Export Models": "نماذج التصدير",
 	"Export Prompts": "مطالبات التصدير",
+	"External Models": "",
 	"Failed to create API Key.": "فشل في إنشاء مفتاح API.",
 	"Failed to read clipboard contents": "فشل في قراءة محتويات الحافظة",
 	"Failed to update settings": "",
@@ -224,6 +233,7 @@
 	"Fluidly stream large external response chunks": "دفق قطع الاستجابة الخارجية الكبيرة بسلاسة",
 	"Focus chat input": "التركيز على إدخال الدردشة",
 	"Followed instructions perfectly": "اتبعت التعليمات على أكمل وجه",
+	"Form": "",
 	"Format your variables using square brackets like this:": "قم بتنسيق المتغيرات الخاصة بك باستخدام الأقواس المربعة مثل هذا:",
 	"Frequency Penalty": "عقوبة التردد",
 	"General": "عام",
@@ -269,9 +279,11 @@
 	"Light": "فاتح",
 	"Listening...": "جاري الاستماع",
 	"LLMs can make mistakes. Verify important information.": "يمكن أن تصدر بعض الأخطاء. لذلك يجب التحقق من المعلومات المهمة",
+	"Local Models": "",
 	"LTR": "من جهة اليسار إلى اليمين",
 	"Made by OpenWebUI Community": "OpenWebUI تم إنشاؤه بواسطة مجتمع ",
 	"Make sure to enclose them with": "تأكد من إرفاقها",
+	"Manage": "",
 	"Manage Models": "إدارة النماذج",
 	"Manage Ollama Models": "Ollama إدارة موديلات ",
 	"Manage Pipelines": "إدارة خطوط الأنابيب",
@@ -485,6 +497,7 @@
 	"to": "الى",
 	"To access the available model names for downloading,": "للوصول إلى أسماء الموديلات المتاحة للتنزيل،",
 	"To access the GGUF models available for downloading,": "للوصول إلى الموديلات GGUF المتاحة للتنزيل،",
+	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "",
 	"to chat input.": "الى كتابة المحادثه",
 	"Today": "اليوم",
 	"Toggle settings": "فتح وأغلاق الاعدادات",
@@ -536,11 +549,13 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "اكتب ملخصًا في 50 كلمة يلخص [الموضوع أو الكلمة الرئيسية]",
 	"Yesterday": "أمس",
 	"You": "انت",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "لا يمكنك استنساخ نموذج أساسي",
 	"You have no archived conversations.": "لا تملك محادثات محفوظه",
 	"You have shared this chat": "تم مشاركة هذه المحادثة",
 	"You're a helpful assistant.": "مساعدك المفيد هنا",
 	"You're now logged in.": "لقد قمت الآن بتسجيل الدخول.",
+	"Your account status is currently pending activation.": "",
 	"Youtube": "Youtube",
 	"Youtube Loader Settings": "Youtube تحميل اعدادات"
 }
