--- a/src/lib/i18n/locales/bg-BG/translation.json
+++ b/src/lib/i18n/locales/bg-BG/translation.json
@@ -12,6 +12,7 @@
 	"a user": "потребител",
 	"About": "Относно",
 	"Account": "Акаунт",
+	"Account Activation Pending": "",
 	"Accurate information": "Точни информация",
 	"Active Users": "",
 	"Add": "Добавяне",
@@ -22,6 +23,7 @@
 	"Add custom prompt": "Добавяне на собствен промпт",
 	"Add Docs": "Добавяне на Документи",
 	"Add Files": "Добавяне на Файлове",
+	"Add memory": "",
 	"Add Memory": "Добавяне на Памет",
 	"Add message": "Добавяне на съобщение",
 	"Add Model": "Добавяне на Модел",
@@ -88,8 +90,10 @@
 	"Chunk Params": "Chunk Params",
 	"Chunk Size": "Chunk Size",
 	"Citation": "Цитат",
+	"Clear memory": "",
 	"Click here for help.": "Натиснете тук за помощ.",
 	"Click here to": "Натиснете тук за",
+	"Click here to download user import template file.": "",
 	"Click here to select": "Натиснете тук, за да изберете",
 	"Click here to select a csv file.": "Натиснете тук, за да изберете csv файл.",
 	"Click here to select documents.": "Натиснете тук, за да изберете документи.",
@@ -105,6 +109,7 @@
 	"Concurrent Requests": "Едновременни искания",
 	"Confirm Password": "Потвърди Парола",
 	"Connections": "Връзки",
+	"Contact Admin for WebUI Access": "",
 	"Content": "Съдържание",
 	"Context Length": "Дължина на Контекста",
 	"Continue Response": "Продължи отговора",
@@ -122,6 +127,7 @@
 	"Create new secret key": "Създаване на нов секретен ключ",
 	"Created at": "Създадено на",
 	"Created At": "Създадено на",
+	"CSV Import": "",
 	"Current Model": "Текущ модел",
 	"Current Password": "Текуща Парола",
 	"Custom": "Персонализиран",
@@ -207,12 +213,15 @@
 	"Error": "Грешка",
 	"Experimental": "Експериментално",
 	"Export": "Износ",
+	"Export All Archived Chats": "",
 	"Export All Chats (All Users)": "Експортване на всички чатове (За всички потребители)",
 	"Export chat (.json)": "",
 	"Export Chats": "Експортване на чатове",
 	"Export Documents Mapping": "Експортване на документен мапинг",
+	"Export LiteLLM config.yaml": "",
 	"Export Models": "Експортиране на модели",
 	"Export Prompts": "Експортване на промптове",
+	"External Models": "",
 	"Failed to create API Key.": "Неуспешно създаване на API ключ.",
 	"Failed to read clipboard contents": "Грешка при четене на съдържанието от клипборда",
 	"Failed to update settings": "",
@@ -224,6 +233,7 @@
 	"Fluidly stream large external response chunks": "Плавно предаване на големи части от външен отговор",
 	"Focus chat input": "Фокусиране на чат вход",
 	"Followed instructions perfectly": "Следвайте инструкциите перфектно",
+	"Form": "",
 	"Format your variables using square brackets like this:": "Форматирайте вашите променливи, като използвате квадратни скоби, както следва:",
 	"Frequency Penalty": "Наказание за честота",
 	"General": "Основни",
@@ -269,9 +279,11 @@
 	"Light": "Светъл",
 	"Listening...": "Слушам...",
 	"LLMs can make mistakes. Verify important information.": "LLMs могат да правят грешки. Проверете важните данни.",
+	"Local Models": "",
 	"LTR": "LTR",
 	"Made by OpenWebUI Community": "Направено от OpenWebUI общността",
 	"Make sure to enclose them with": "Уверете се, че са заключени с",
+	"Manage": "",
 	"Manage Models": "Управление на Моделите",
 	"Manage Ollama Models": "Управление на Ollama Моделите",
 	"Manage Pipelines": "Управление на тръбопроводи",
@@ -481,6 +493,7 @@
 	"to": "в",
 	"To access the available model names for downloading,": "За да получите достъп до наличните имена на модели за изтегляне,",
 	"To access the GGUF models available for downloading,": "За да получите достъп до GGUF моделите, налични за изтегляне,",
+	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "",
 	"to chat input.": "към чат входа.",
 	"Today": "днес",
 	"Toggle settings": "Toggle settings",
@@ -532,11 +545,13 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Напиши описание в 50 знака, което описва [тема или ключова дума].",
 	"Yesterday": "вчера",
 	"You": "вие",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "Не можете да клонирате базов модел",
 	"You have no archived conversations.": "Нямате архивирани разговори.",
 	"You have shared this chat": "Вие сте споделели този чат",
 	"You're a helpful assistant.": "Вие сте полезен асистент.",
 	"You're now logged in.": "Сега, вие влязохте в системата.",
+	"Your account status is currently pending activation.": "",
 	"Youtube": "Youtube",
 	"Youtube Loader Settings": "Youtube Loader Settings"
 }
