--- a/src/lib/i18n/locales/ca-ES/translation.json
+++ b/src/lib/i18n/locales/ca-ES/translation.json
@@ -12,6 +12,7 @@
 	"a user": "un usuari",
 	"About": "Sobre",
 	"Account": "Compte",
+	"Account Activation Pending": "",
 	"Accurate information": "Informació precisa",
 	"Active Users": "",
 	"Add": "Afegir",
@@ -22,6 +23,7 @@
 	"Add custom prompt": "Afegir un prompt personalitzat",
 	"Add Docs": "Afegeix Documents",
 	"Add Files": "Afegeix Arxius",
+	"Add memory": "",
 	"Add Memory": "Afegir Memòria",
 	"Add message": "Afegeix missatge",
 	"Add Model": "Afegir Model",
@@ -88,8 +90,10 @@
 	"Chunk Params": "Paràmetres de Blocs",
 	"Chunk Size": "Mida del Bloc",
 	"Citation": "Citació",
+	"Clear memory": "",
 	"Click here for help.": "Fes clic aquí per ajuda.",
 	"Click here to": "Fes clic aquí per",
+	"Click here to download user import template file.": "",
 	"Click here to select": "Fes clic aquí per seleccionar",
 	"Click here to select a csv file.": "Fes clic aquí per seleccionar un fitxer csv.",
 	"Click here to select documents.": "Fes clic aquí per seleccionar documents.",
@@ -105,6 +109,7 @@
 	"Concurrent Requests": "Sol·licituds simultànies",
 	"Confirm Password": "Confirma la Contrasenya",
 	"Connections": "Connexions",
+	"Contact Admin for WebUI Access": "",
 	"Content": "Contingut",
 	"Context Length": "Longitud del Context",
 	"Continue Response": "Continua la Resposta",
@@ -122,6 +127,7 @@
 	"Create new secret key": "Crea una nova clau secreta",
 	"Created at": "Creat el",
 	"Created At": "Creat el",
+	"CSV Import": "",
 	"Current Model": "Model Actual",
 	"Current Password": "Contrasenya Actual",
 	"Custom": "Personalitzat",
@@ -207,12 +213,15 @@
 	"Error": "Error",
 	"Experimental": "Experimental",
 	"Export": "Exportar",
+	"Export All Archived Chats": "",
 	"Export All Chats (All Users)": "Exporta Tots els Xats (Tots els Usuaris)",
 	"Export chat (.json)": "",
 	"Export Chats": "Exporta Xats",
 	"Export Documents Mapping": "Exporta el Mapatge de Documents",
+	"Export LiteLLM config.yaml": "",
 	"Export Models": "Models d'exportació",
 	"Export Prompts": "Exporta Prompts",
+	"External Models": "",
 	"Failed to create API Key.": "No s'ha pogut crear la clau d'API.",
 	"Failed to read clipboard contents": "No s'ha pogut llegir el contingut del porta-retalls",
 	"Failed to update settings": "",
@@ -224,6 +233,7 @@
 	"Fluidly stream large external response chunks": "Transmita con fluidez grandes fragmentos de respuesta externa",
 	"Focus chat input": "Enfoca l'entrada del xat",
 	"Followed instructions perfectly": "Siguiu les instruccions perfeicte",
+	"Form": "",
 	"Format your variables using square brackets like this:": "Formata les teves variables utilitzant claudàtors així:",
 	"Frequency Penalty": "Pena de freqüència",
 	"General": "General",
@@ -269,9 +279,11 @@
 	"Light": "Clar",
 	"Listening...": "Escoltant...",
 	"LLMs can make mistakes. Verify important information.": "Els LLMs poden cometre errors. Verifica la informació important.",
+	"Local Models": "",
 	"LTR": "LTR",
 	"Made by OpenWebUI Community": "Creat per la Comunitat OpenWebUI",
 	"Make sure to enclose them with": "Assegura't d'envoltar-los amb",
+	"Manage": "",
 	"Manage Models": "Gestiona Models",
 	"Manage Ollama Models": "Gestiona Models Ollama",
 	"Manage Pipelines": "Gestionar canonades",
@@ -482,6 +494,7 @@
 	"to": "a",
 	"To access the available model names for downloading,": "Per accedir als noms dels models disponibles per descarregar,",
 	"To access the GGUF models available for downloading,": "Per accedir als models GGUF disponibles per descarregar,",
+	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "",
 	"to chat input.": "a l'entrada del xat.",
 	"Today": "Avui",
 	"Toggle settings": "Commuta configuracions",
@@ -533,11 +546,13 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Escriu un resum en 50 paraules que resumeixi [tema o paraula clau].",
 	"Yesterday": "Ayer",
 	"You": "Tu",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "No es pot clonar un model base",
 	"You have no archived conversations.": "No tens converses arxivades.",
 	"You have shared this chat": "Has compartit aquest xat",
 	"You're a helpful assistant.": "Ets un assistent útil.",
 	"You're now logged in.": "Ara estàs connectat.",
+	"Your account status is currently pending activation.": "",
 	"Youtube": "Youtube",
 	"Youtube Loader Settings": "Configuració del carregador de Youtube"
 }
