--- a/src/lib/i18n/locales/ceb-PH/translation.json
+++ b/src/lib/i18n/locales/ceb-PH/translation.json
@@ -12,6 +12,7 @@
 	"a user": "usa ka user",
 	"About": "Mahitungod sa",
 	"Account": "Account",
+	"Account Activation Pending": "",
 	"Accurate information": "",
 	"Active Users": "",
 	"Add": "",
@@ -22,6 +23,7 @@
 	"Add custom prompt": "Pagdugang og custom prompt",
 	"Add Docs": "Pagdugang og mga dokumento",
 	"Add Files": "Idugang ang mga file",
+	"Add memory": "",
 	"Add Memory": "",
 	"Add message": "Pagdugang og mensahe",
 	"Add Model": "",
@@ -88,8 +90,10 @@
 	"Chunk Params": "Mga Setting sa Block",
 	"Chunk Size": "Gidak-on sa block",
 	"Citation": "Mga kinutlo",
+	"Clear memory": "",
 	"Click here for help.": "I-klik dinhi alang sa tabang.",
 	"Click here to": "",
+	"Click here to download user import template file.": "",
 	"Click here to select": "I-klik dinhi aron makapili",
 	"Click here to select a csv file.": "",
 	"Click here to select documents.": "Pag-klik dinhi aron mapili ang mga dokumento.",
@@ -105,6 +109,7 @@
 	"Concurrent Requests": "",
 	"Confirm Password": "Kumpirma ang password",
 	"Connections": "Mga koneksyon",
+	"Contact Admin for WebUI Access": "",
 	"Content": "Kontento",
 	"Context Length": "Ang gitas-on sa konteksto",
 	"Continue Response": "",
@@ -122,6 +127,7 @@
 	"Create new secret key": "",
 	"Created at": "Gihimo ang",
 	"Created At": "",
+	"CSV Import": "",
 	"Current Model": "Kasamtangang modelo",
 	"Current Password": "Kasamtangang Password",
 	"Custom": "Custom",
@@ -207,12 +213,15 @@
 	"Error": "",
 	"Experimental": "Eksperimento",
 	"Export": "",
+	"Export All Archived Chats": "",
 	"Export All Chats (All Users)": "I-export ang tanan nga mga chat (Tanan nga tiggamit)",
 	"Export chat (.json)": "",
 	"Export Chats": "I-export ang mga chat",
 	"Export Documents Mapping": "I-export ang pagmapa sa dokumento",
+	"Export LiteLLM config.yaml": "",
 	"Export Models": "",
 	"Export Prompts": "Export prompts",
+	"External Models": "",
 	"Failed to create API Key.": "",
 	"Failed to read clipboard contents": "Napakyas sa pagbasa sa sulod sa clipboard",
 	"Failed to update settings": "",
@@ -224,6 +233,7 @@
 	"Fluidly stream large external response chunks": "Hapsay nga paghatud sa daghang mga tipik sa eksternal nga mga tubag",
 	"Focus chat input": "Pag-focus sa entry sa diskusyon",
 	"Followed instructions perfectly": "",
+	"Form": "",
 	"Format your variables using square brackets like this:": "I-format ang imong mga variable gamit ang square brackets sama niini:",
 	"Frequency Penalty": "",
 	"General": "Heneral",
@@ -269,9 +279,11 @@
 	"Light": "Kahayag",
 	"Listening...": "Paminaw...",
 	"LLMs can make mistakes. Verify important information.": "Ang mga LLM mahimong masayop. ",
+	"Local Models": "",
 	"LTR": "",
 	"Made by OpenWebUI Community": "Gihimo sa komunidad sa OpenWebUI",
 	"Make sure to enclose them with": "Siguruha nga palibutan sila",
+	"Manage": "",
 	"Manage Models": "Pagdumala sa mga templates",
 	"Manage Ollama Models": "Pagdumala sa mga modelo sa Ollama",
 	"Manage Pipelines": "",
@@ -481,6 +493,7 @@
 	"to": "adunay",
 	"To access the available model names for downloading,": "Aron ma-access ang mga ngalan sa modelo nga ma-download,",
 	"To access the GGUF models available for downloading,": "Aron ma-access ang mga modelo sa GGUF nga magamit alang sa pag-download,",
+	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "",
 	"to chat input.": "sa entrada sa iring.",
 	"Today": "",
 	"Toggle settings": "I-toggle ang mga setting",
@@ -532,11 +545,13 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Pagsulat og 50 ka pulong nga summary nga nagsumaryo [topic o keyword].",
 	"Yesterday": "",
 	"You": "",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "",
 	"You have no archived conversations.": "",
 	"You have shared this chat": "",
 	"You're a helpful assistant.": "Usa ka ka mapuslanon nga katabang",
 	"You're now logged in.": "Konektado ka na karon.",
+	"Your account status is currently pending activation.": "",
 	"Youtube": "",
 	"Youtube Loader Settings": ""
 }
