--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -12,6 +12,7 @@
 	"a user": "ein Benutzer",
 	"About": "Über",
 	"Account": "Account",
+	"Account Activation Pending": "",
 	"Accurate information": "Genaue Information",
 	"Active Users": "",
 	"Add": "Hinzufügen",
@@ -22,6 +23,7 @@
 	"Add custom prompt": "Eigenen Prompt hinzufügen",
 	"Add Docs": "Dokumente hinzufügen",
 	"Add Files": "Dateien hinzufügen",
+	"Add memory": "",
 	"Add Memory": "Speicher hinzufügen",
 	"Add message": "Nachricht eingeben",
 	"Add Model": "Modell hinzufügen",
@@ -88,8 +90,10 @@
 	"Chunk Params": "Chunk Parameter",
 	"Chunk Size": "Chunk Size",
 	"Citation": "Zitate",
+	"Clear memory": "",
 	"Click here for help.": "Klicke hier für Hilfe.",
 	"Click here to": "Klicke hier, um",
+	"Click here to download user import template file.": "",
 	"Click here to select": "Klicke hier um auszuwählen",
 	"Click here to select a csv file.": "Klicke hier um eine CSV-Datei auszuwählen.",
 	"Click here to select documents.": "Klicke hier um Dokumente auszuwählen",
@@ -105,6 +109,7 @@
 	"Concurrent Requests": "Gleichzeitige Anforderungen",
 	"Confirm Password": "Passwort bestätigen",
 	"Connections": "Verbindungen",
+	"Contact Admin for WebUI Access": "",
 	"Content": "Inhalt",
 	"Context Length": "Context Length",
 	"Continue Response": "Antwort fortsetzen",
@@ -122,6 +127,7 @@
 	"Create new secret key": "Neuen API Schlüssel erstellen",
 	"Created at": "Erstellt am",
 	"Created At": "Erstellt am",
+	"CSV Import": "",
 	"Current Model": "Aktuelles Modell",
 	"Current Password": "Aktuelles Passwort",
 	"Custom": "Benutzerdefiniert",
@@ -207,12 +213,15 @@
 	"Error": "Fehler",
 	"Experimental": "Experimentell",
 	"Export": "Exportieren",
+	"Export All Archived Chats": "",
 	"Export All Chats (All Users)": "Alle Chats exportieren (alle Benutzer)",
 	"Export chat (.json)": "",
 	"Export Chats": "Chats exportieren",
 	"Export Documents Mapping": "Dokumentenmapping exportieren",
+	"Export LiteLLM config.yaml": "",
 	"Export Models": "Modelle exportieren",
 	"Export Prompts": "Prompts exportieren",
+	"External Models": "",
 	"Failed to create API Key.": "API Key erstellen fehlgeschlagen",
 	"Failed to read clipboard contents": "Fehler beim Lesen des Zwischenablageninhalts",
 	"Failed to update settings": "",
@@ -224,6 +233,7 @@
 	"Fluidly stream large external response chunks": "Streamen Sie große externe Antwortblöcke flüssig",
 	"Focus chat input": "Chat-Eingabe fokussieren",
 	"Followed instructions perfectly": "Anweisungen perfekt befolgt",
+	"Form": "",
 	"Format your variables using square brackets like this:": "Formatiere deine Variablen mit eckigen Klammern wie folgt:",
 	"Frequency Penalty": "Frequenz-Strafe",
 	"General": "Allgemein",
@@ -269,9 +279,11 @@
 	"Light": "Hell",
 	"Listening...": "Hören...",
 	"LLMs can make mistakes. Verify important information.": "LLMs können Fehler machen. Überprüfe wichtige Informationen.",
+	"Local Models": "",
 	"LTR": "LTR",
 	"Made by OpenWebUI Community": "Von der OpenWebUI-Community",
 	"Make sure to enclose them with": "Formatiere deine Variablen mit:",
+	"Manage": "",
 	"Manage Models": "Modelle verwalten",
 	"Manage Ollama Models": "Ollama-Modelle verwalten",
 	"Manage Pipelines": "Verwalten von Pipelines",
@@ -481,6 +493,7 @@
 	"to": "für",
 	"To access the available model names for downloading,": "Um auf die verfügbaren Modellnamen zum Herunterladen zuzugreifen,",
 	"To access the GGUF models available for downloading,": "Um auf die verfügbaren GGUF Modelle zum Herunterladen zuzugreifen",
+	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "",
 	"to chat input.": "to chat input.",
 	"Today": "Heute",
 	"Toggle settings": "Einstellungen umschalten",
@@ -532,11 +545,13 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Schreibe eine kurze Zusammenfassung in 50 Wörtern, die [Thema oder Schlüsselwort] zusammenfasst.",
 	"Yesterday": "Gestern",
 	"You": "Du",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "Sie können ein Basismodell nicht klonen",
 	"You have no archived conversations.": "Du hast keine archivierten Unterhaltungen.",
 	"You have shared this chat": "Du hast diesen Chat",
 	"You're a helpful assistant.": "Du bist ein hilfreicher Assistent.",
 	"You're now logged in.": "Du bist nun eingeloggt.",
+	"Your account status is currently pending activation.": "",
 	"Youtube": "YouTube",
 	"Youtube Loader Settings": "YouTube-Ladeeinstellungen"
 }
