--- a/src/lib/i18n/locales/dg-DG/translation.json
+++ b/src/lib/i18n/locales/dg-DG/translation.json
@@ -12,6 +12,7 @@
 	"a user": "such user",
 	"About": "Much About",
 	"Account": "Account",
+	"Account Activation Pending": "",
 	"Accurate information": "",
 	"Active Users": "",
 	"Add": "",
@@ -22,6 +23,7 @@
 	"Add custom prompt": "",
 	"Add Docs": "Add Docs",
 	"Add Files": "Add Files",
+	"Add memory": "",
 	"Add Memory": "",
 	"Add message": "Add Prompt",
 	"Add Model": "",
@@ -88,8 +90,10 @@
 	"Chunk Params": "Chunk Params",
 	"Chunk Size": "Chunk Size",
 	"Citation": "",
+	"Clear memory": "",
 	"Click here for help.": "Click for help. Much assist.",
 	"Click here to": "",
+	"Click here to download user import template file.": "",
 	"Click here to select": "Click to select",
 	"Click here to select a csv file.": "",
 	"Click here to select documents.": "Click to select documents",
@@ -105,6 +109,7 @@
 	"Concurrent Requests": "",
 	"Confirm Password": "Confirm Password",
 	"Connections": "Connections",
+	"Contact Admin for WebUI Access": "",
 	"Content": "Content",
 	"Context Length": "Context Length",
 	"Continue Response": "",
@@ -122,6 +127,7 @@
 	"Create new secret key": "",
 	"Created at": "Created at",
 	"Created At": "",
+	"CSV Import": "",
 	"Current Model": "Current Model",
 	"Current Password": "Current Password",
 	"Custom": "Custom",
@@ -207,12 +213,15 @@
 	"Error": "",
 	"Experimental": "Much Experiment",
 	"Export": "",
+	"Export All Archived Chats": "",
 	"Export All Chats (All Users)": "Export All Chats (All Doggos)",
 	"Export chat (.json)": "",
 	"Export Chats": "Export Barks",
 	"Export Documents Mapping": "Export Mappings of Dogos",
+	"Export LiteLLM config.yaml": "",
 	"Export Models": "",
 	"Export Prompts": "Export Promptos",
+	"External Models": "",
 	"Failed to create API Key.": "",
 	"Failed to read clipboard contents": "Failed to read clipboard borks",
 	"Failed to update settings": "",
@@ -224,6 +233,7 @@
 	"Fluidly stream large external response chunks": "Fluidly wow big chunks",
 	"Focus chat input": "Focus chat bork",
 	"Followed instructions perfectly": "",
+	"Form": "",
 	"Format your variables using square brackets like this:": "Format variables using square brackets like wow:",
 	"Frequency Penalty": "",
 	"General": "Woweral",
@@ -269,9 +279,11 @@
 	"Light": "Light",
 	"Listening...": "Listening...",
 	"LLMs can make mistakes. Verify important information.": "LLMs can make borks. Verify important info.",
+	"Local Models": "",
 	"LTR": "",
 	"Made by OpenWebUI Community": "Made by OpenWebUI Community",
 	"Make sure to enclose them with": "Make sure to enclose them with",
+	"Manage": "",
 	"Manage Models": "Manage Wowdels",
 	"Manage Ollama Models": "Manage Ollama Wowdels",
 	"Manage Pipelines": "",
@@ -400,6 +412,8 @@
 	"Search Prompts": "Search Prompts much wow",
 	"Search Result Count": "",
 	"Searched {{count}} sites_one": "",
+	"Searched {{count}} sites_few": "",
+	"Searched {{count}} sites_many": "",
 	"Searched {{count}} sites_other": "",
 	"Searching the web for '{{searchQuery}}'": "",
 	"Searxng Query URL": "",
@@ -481,6 +495,7 @@
 	"to": "to very to",
 	"To access the available model names for downloading,": "To access the available model names for downloading, much access",
 	"To access the GGUF models available for downloading,": "To access the GGUF models available for downloading, much access",
+	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "",
 	"to chat input.": "to chat input. Very chat.",
 	"Today": "",
 	"Toggle settings": "Toggle settings much toggle",
@@ -532,11 +547,13 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Write a summary in 50 words that summarizes [topic or keyword]. Much summarize.",
 	"Yesterday": "",
 	"You": "",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "",
 	"You have no archived conversations.": "",
 	"You have shared this chat": "",
 	"You're a helpful assistant.": "You're a helpful assistant. Much helpful.",
 	"You're now logged in.": "You're now logged in. Much logged.",
+	"Your account status is currently pending activation.": "",
 	"Youtube": "",
 	"Youtube Loader Settings": ""
 }
