--- a/src/lib/i18n/locales/en-GB/translation.json
+++ b/src/lib/i18n/locales/en-GB/translation.json
@@ -12,6 +12,7 @@
 	"a user": "",
 	"About": "",
 	"Account": "",
+	"Account Activation Pending": "",
 	"Accurate information": "",
 	"Active Users": "",
 	"Add": "",
@@ -22,6 +23,7 @@
 	"Add custom prompt": "",
 	"Add Docs": "",
 	"Add Files": "",
+	"Add memory": "",
 	"Add Memory": "",
 	"Add message": "",
 	"Add Model": "",
@@ -88,8 +90,10 @@
 	"Chunk Params": "",
 	"Chunk Size": "",
 	"Citation": "",
+	"Clear memory": "",
 	"Click here for help.": "",
 	"Click here to": "",
+	"Click here to download user import template file.": "",
 	"Click here to select": "",
 	"Click here to select a csv file.": "",
 	"Click here to select documents.": "",
@@ -105,6 +109,7 @@
 	"Concurrent Requests": "",
 	"Confirm Password": "",
 	"Connections": "",
+	"Contact Admin for WebUI Access": "",
 	"Content": "",
 	"Context Length": "",
 	"Continue Response": "",
@@ -122,6 +127,7 @@
 	"Create new secret key": "",
 	"Created at": "",
 	"Created At": "",
+	"CSV Import": "",
 	"Current Model": "",
 	"Current Password": "",
 	"Custom": "",
@@ -207,12 +213,15 @@
 	"Error": "",
 	"Experimental": "",
 	"Export": "",
+	"Export All Archived Chats": "",
 	"Export All Chats (All Users)": "",
 	"Export chat (.json)": "",
 	"Export Chats": "",
 	"Export Documents Mapping": "",
+	"Export LiteLLM config.yaml": "",
 	"Export Models": "",
 	"Export Prompts": "",
+	"External Models": "",
 	"Failed to create API Key.": "",
 	"Failed to read clipboard contents": "",
 	"Failed to update settings": "",
@@ -224,6 +233,7 @@
 	"Fluidly stream large external response chunks": "",
 	"Focus chat input": "",
 	"Followed instructions perfectly": "",
+	"Form": "",
 	"Format your variables using square brackets like this:": "",
 	"Frequency Penalty": "",
 	"General": "",
@@ -269,9 +279,11 @@
 	"Light": "",
 	"Listening...": "",
 	"LLMs can make mistakes. Verify important information.": "",
+	"Local Models": "",
 	"LTR": "",
 	"Made by OpenWebUI Community": "",
 	"Make sure to enclose them with": "",
+	"Manage": "",
 	"Manage Models": "",
 	"Manage Ollama Models": "",
 	"Manage Pipelines": "",
@@ -481,6 +493,7 @@
 	"to": "",
 	"To access the available model names for downloading,": "",
 	"To access the GGUF models available for downloading,": "",
+	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "",
 	"to chat input.": "",
 	"Today": "",
 	"Toggle settings": "",
@@ -532,11 +545,13 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "",
 	"Yesterday": "",
 	"You": "",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "",
 	"You have no archived conversations.": "",
 	"You have shared this chat": "",
 	"You're a helpful assistant.": "",
 	"You're now logged in.": "",
+	"Your account status is currently pending activation.": "",
 	"Youtube": "",
 	"Youtube Loader Settings": ""
 }
