--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -12,6 +12,7 @@
 	"a user": "un usuario",
 	"About": "Sobre nosotros",
 	"Account": "Cuenta",
+	"Account Activation Pending": "",
 	"Accurate information": "Información precisa",
 	"Active Users": "",
 	"Add": "Agregar",
@@ -22,6 +23,7 @@
 	"Add custom prompt": "Agregar un prompt personalizado",
 	"Add Docs": "Agregar Documentos",
 	"Add Files": "Agregar Archivos",
+	"Add memory": "",
 	"Add Memory": "Agregar Memoria",
 	"Add message": "Agregar Prompt",
 	"Add Model": "Agregar Modelo",
@@ -88,8 +90,10 @@
 	"Chunk Params": "Parámetros de fragmentos",
 	"Chunk Size": "Tamaño de fragmentos",
 	"Citation": "Cita",
+	"Clear memory": "",
 	"Click here for help.": "Presiona aquí para obtener ayuda.",
 	"Click here to": "Presiona aquí para",
+	"Click here to download user import template file.": "",
 	"Click here to select": "Presiona aquí para seleccionar",
 	"Click here to select a csv file.": "Presiona aquí para seleccionar un archivo csv.",
 	"Click here to select documents.": "Presiona aquí para seleccionar documentos",
@@ -105,6 +109,7 @@
 	"Concurrent Requests": "Solicitudes simultáneas",
 	"Confirm Password": "Confirmar Contraseña",
 	"Connections": "Conexiones",
+	"Contact Admin for WebUI Access": "",
 	"Content": "Contenido",
 	"Context Length": "Longitud del contexto",
 	"Continue Response": "Continuar Respuesta",
@@ -122,6 +127,7 @@
 	"Create new secret key": "Crear una nueva clave secreta",
 	"Created at": "Creado en",
 	"Created At": "Creado en",
+	"CSV Import": "",
 	"Current Model": "Modelo Actual",
 	"Current Password": "Contraseña Actual",
 	"Custom": "Personalizado",
@@ -207,12 +213,15 @@
 	"Error": "Error",
 	"Experimental": "Experimental",
 	"Export": "Exportar",
+	"Export All Archived Chats": "",
 	"Export All Chats (All Users)": "Exportar todos los chats (Todos los usuarios)",
 	"Export chat (.json)": "",
 	"Export Chats": "Exportar Chats",
 	"Export Documents Mapping": "Exportar el mapeo de documentos",
+	"Export LiteLLM config.yaml": "",
 	"Export Models": "Modelos de exportación",
 	"Export Prompts": "Exportar Prompts",
+	"External Models": "",
 	"Failed to create API Key.": "No se pudo crear la clave API.",
 	"Failed to read clipboard contents": "No se pudo leer el contenido del portapapeles",
 	"Failed to update settings": "",
@@ -224,6 +233,7 @@
 	"Fluidly stream large external response chunks": "Transmita con fluidez grandes fragmentos de respuesta externa",
 	"Focus chat input": "Enfoca la entrada del chat",
 	"Followed instructions perfectly": "Siguió las instrucciones perfectamente",
+	"Form": "",
 	"Format your variables using square brackets like this:": "Formatea tus variables usando corchetes de la siguiente manera:",
 	"Frequency Penalty": "Penalización de frecuencia",
 	"General": "General",
@@ -269,9 +279,11 @@
 	"Light": "Claro",
 	"Listening...": "Escuchando...",
 	"LLMs can make mistakes. Verify important information.": "Los LLM pueden cometer errores. Verifica la información importante.",
+	"Local Models": "",
 	"LTR": "LTR",
 	"Made by OpenWebUI Community": "Hecho por la comunidad de OpenWebUI",
 	"Make sure to enclose them with": "Asegúrese de adjuntarlos con",
+	"Manage": "",
 	"Manage Models": "Administrar Modelos",
 	"Manage Ollama Models": "Administrar Modelos Ollama",
 	"Manage Pipelines": "Administrar canalizaciones",
@@ -482,6 +494,7 @@
 	"to": "para",
 	"To access the available model names for downloading,": "Para acceder a los nombres de modelos disponibles para descargar,",
 	"To access the GGUF models available for downloading,": "Para acceder a los modelos GGUF disponibles para descargar,",
+	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "",
 	"to chat input.": "a la entrada del chat.",
 	"Today": "Hoy",
 	"Toggle settings": "Alternar configuración",
@@ -533,11 +546,13 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Escribe un resumen en 50 palabras que resuma [tema o palabra clave].",
 	"Yesterday": "Ayer",
 	"You": "Usted",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "No se puede clonar un modelo base",
 	"You have no archived conversations.": "No tiene conversaciones archivadas.",
 	"You have shared this chat": "Usted ha compartido esta conversación",
 	"You're a helpful assistant.": "Usted es un asistente útil.",
 	"You're now logged in.": "Usted ahora está conectado.",
+	"Your account status is currently pending activation.": "",
 	"Youtube": "Youtube",
 	"Youtube Loader Settings": "Configuración del cargador de Youtube"
 }
