--- a/src/lib/i18n/locales/fi-FI/translation.json
+++ b/src/lib/i18n/locales/fi-FI/translation.json
@@ -12,6 +12,7 @@
 	"a user": "käyttäjä",
 	"About": "Tietoja",
 	"Account": "Tili",
+	"Account Activation Pending": "",
 	"Accurate information": "Tarkkaa tietoa",
 	"Active Users": "",
 	"Add": "Lisää",
@@ -22,6 +23,7 @@
 	"Add custom prompt": "Lisää mukautettu kehote",
 	"Add Docs": "Lisää asiakirjoja",
 	"Add Files": "Lisää tiedostoja",
+	"Add memory": "",
 	"Add Memory": "Lisää muistia",
 	"Add message": "Lisää viesti",
 	"Add Model": "Lisää malli",
@@ -88,8 +90,10 @@
 	"Chunk Params": "Osien parametrit",
 	"Chunk Size": "Osien koko",
 	"Citation": "Sitaatti",
+	"Clear memory": "",
 	"Click here for help.": "Klikkaa tästä saadaksesi apua.",
 	"Click here to": "Klikkaa tästä",
+	"Click here to download user import template file.": "",
 	"Click here to select": "Klikkaa tästä valitaksesi",
 	"Click here to select a csv file.": "Klikkaa tästä valitaksesi CSV-tiedosto.",
 	"Click here to select documents.": "Klikkaa tästä valitaksesi asiakirjoja.",
@@ -105,6 +109,7 @@
 	"Concurrent Requests": "Samanaikaiset pyynnöt",
 	"Confirm Password": "Vahvista salasana",
 	"Connections": "Yhteydet",
+	"Contact Admin for WebUI Access": "",
 	"Content": "Sisältö",
 	"Context Length": "Kontekstin pituus",
 	"Continue Response": "Jatka vastausta",
@@ -122,6 +127,7 @@
 	"Create new secret key": "Luo uusi salainen avain",
 	"Created at": "Luotu",
 	"Created At": "Luotu",
+	"CSV Import": "",
 	"Current Model": "Nykyinen malli",
 	"Current Password": "Nykyinen salasana",
 	"Custom": "Mukautettu",
@@ -207,12 +213,15 @@
 	"Error": "Virhe",
 	"Experimental": "Kokeellinen",
 	"Export": "Vienti",
+	"Export All Archived Chats": "",
 	"Export All Chats (All Users)": "Vie kaikki keskustelut (kaikki käyttäjät)",
 	"Export chat (.json)": "",
 	"Export Chats": "Vie keskustelut",
 	"Export Documents Mapping": "Vie asiakirjakartoitus",
+	"Export LiteLLM config.yaml": "",
 	"Export Models": "Vie malleja",
 	"Export Prompts": "Vie kehotteet",
+	"External Models": "",
 	"Failed to create API Key.": "API-avaimen luonti epäonnistui.",
 	"Failed to read clipboard contents": "Leikepöydän sisällön lukeminen epäonnistui",
 	"Failed to update settings": "",
@@ -224,6 +233,7 @@
 	"Fluidly stream large external response chunks": "Virtaa suuria ulkoisia vastausosia joustavasti",
 	"Focus chat input": "Fokusoi syöttökenttään",
 	"Followed instructions perfectly": "Noudatti ohjeita täydellisesti",
+	"Form": "",
 	"Format your variables using square brackets like this:": "Muotoile muuttujat hakasulkeilla näin:",
 	"Frequency Penalty": "Taajuussakko",
 	"General": "Yleinen",
@@ -269,9 +279,11 @@
 	"Light": "Vaalea",
 	"Listening...": "Kuunnellaan...",
 	"LLMs can make mistakes. Verify important information.": "Kielimallit voivat tehdä virheitä. Varmista tärkeät tiedot.",
+	"Local Models": "",
 	"LTR": "LTR",
 	"Made by OpenWebUI Community": "Tehnyt OpenWebUI-yhteisö",
 	"Make sure to enclose them with": "Varmista, että suljet ne",
+	"Manage": "",
 	"Manage Models": "Hallitse malleja",
 	"Manage Ollama Models": "Hallitse Ollama-malleja",
 	"Manage Pipelines": "Hallitse putkia",
@@ -481,6 +493,7 @@
 	"to": "->",
 	"To access the available model names for downloading,": "Päästäksesi käsiksi ladattavissa oleviin mallinimiin,",
 	"To access the GGUF models available for downloading,": "Päästäksesi käsiksi ladattavissa oleviin GGUF-malleihin,",
+	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "",
 	"to chat input.": "keskustelusyötteeseen.",
 	"Today": "Tänään",
 	"Toggle settings": "Kytke asetukset",
@@ -532,11 +545,13 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Kirjoita 50 sanan yhteenveto, joka tiivistää [aihe tai avainsana].",
 	"Yesterday": "Eilen",
 	"You": "Sinä",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "Perusmallia ei voi kloonata",
 	"You have no archived conversations.": "Sinulla ei ole arkistoituja keskusteluja.",
 	"You have shared this chat": "Olet jakanut tämän keskustelun",
 	"You're a helpful assistant.": "Olet avulias apulainen.",
 	"You're now logged in.": "Olet nyt kirjautunut sisään.",
+	"Your account status is currently pending activation.": "",
 	"Youtube": "Youtube",
 	"Youtube Loader Settings": "Youtube Loader-asetukset"
 }
