--- a/src/lib/i18n/locales/hi-IN/translation.json
+++ b/src/lib/i18n/locales/hi-IN/translation.json
@@ -12,6 +12,7 @@
 	"a user": "एक उपयोगकर्ता",
 	"About": "हमारे बारे में",
 	"Account": "खाता",
+	"Account Activation Pending": "",
 	"Accurate information": "सटीक जानकारी",
 	"Active Users": "",
 	"Add": "जोड़ें",
@@ -22,6 +23,7 @@
 	"Add custom prompt": "अनुकूल संकेत जोड़ें",
 	"Add Docs": "दस्तावेज़ जोड़ें",
 	"Add Files": "फाइलें जोड़ें",
+	"Add memory": "",
 	"Add Memory": "मेमोरी जोड़ें",
 	"Add message": "संदेश डालें",
 	"Add Model": "मॉडल जोड़ें",
@@ -88,8 +90,10 @@
 	"Chunk Params": "चंक पैरामीटर्स",
 	"Chunk Size": "चंक आकार",
 	"Citation": "उद्धरण",
+	"Clear memory": "",
 	"Click here for help.": "सहायता के लिए यहां क्लिक करें।",
 	"Click here to": "यहां क्लिक करें",
+	"Click here to download user import template file.": "",
 	"Click here to select": "चयन करने के लिए यहां क्लिक करें।",
 	"Click here to select a csv file.": "सीएसवी फ़ाइल का चयन करने के लिए यहां क्लिक करें।",
 	"Click here to select documents.": "दस्तावेज़ चुनने के लिए यहां क्लिक करें।",
@@ -105,6 +109,7 @@
 	"Concurrent Requests": "समवर्ती अनुरोध",
 	"Confirm Password": "पासवर्ड की पुष्टि कीजिये",
 	"Connections": "सम्बन्ध",
+	"Contact Admin for WebUI Access": "",
 	"Content": "सामग्री",
 	"Context Length": "प्रसंग की लंबाई",
 	"Continue Response": "प्रतिक्रिया जारी रखें",
@@ -122,6 +127,7 @@
 	"Create new secret key": "नया क्रिप्टोग्राफिक क्षेत्र बनाएं",
 	"Created at": "किस समय बनाया गया",
 	"Created At": "किस समय बनाया गया",
+	"CSV Import": "",
 	"Current Model": "वर्तमान मॉडल",
 	"Current Password": "वर्तमान पासवर्ड",
 	"Custom": "कस्टम संस्करण",
@@ -207,12 +213,15 @@
 	"Error": "चूक",
 	"Experimental": "प्रयोगात्मक",
 	"Export": "निर्यातित माल",
+	"Export All Archived Chats": "",
 	"Export All Chats (All Users)": "सभी चैट निर्यात करें (सभी उपयोगकर्ताओं की)",
 	"Export chat (.json)": "",
 	"Export Chats": "चैट निर्यात करें",
 	"Export Documents Mapping": "निर्यात दस्तावेज़ मैपिंग",
+	"Export LiteLLM config.yaml": "",
 	"Export Models": "निर्यात मॉडल",
 	"Export Prompts": "प्रॉम्प्ट निर्यात करें",
+	"External Models": "",
 	"Failed to create API Key.": "एपीआई कुंजी बनाने में विफल.",
 	"Failed to read clipboard contents": "क्लिपबोर्ड सामग्री पढ़ने में विफल",
 	"Failed to update settings": "",
@@ -224,6 +233,7 @@
 	"Fluidly stream large external response chunks": "बड़े बाह्य प्रतिक्रिया खंडों को तरल रूप से प्रवाहित करें",
 	"Focus chat input": "चैट इनपुट पर फ़ोकस करें",
 	"Followed instructions perfectly": "निर्देशों का पूर्णतः पालन किया",
+	"Form": "",
 	"Format your variables using square brackets like this:": "वर्गाकार कोष्ठकों का उपयोग करके अपने चरों को इस प्रकार प्रारूपित करें :",
 	"Frequency Penalty": "फ्रीक्वेंसी पेनल्टी",
 	"General": "सामान्य",
@@ -269,9 +279,11 @@
 	"Light": "सुन",
 	"Listening...": "सुन रहा हूँ...",
 	"LLMs can make mistakes. Verify important information.": "एलएलएम गलतियाँ कर सकते हैं। महत्वपूर्ण जानकारी सत्यापित करें.",
+	"Local Models": "",
 	"LTR": "LTR",
 	"Made by OpenWebUI Community": "OpenWebUI समुदाय द्वारा निर्मित",
 	"Make sure to enclose them with": "उन्हें संलग्न करना सुनिश्चित करें",
+	"Manage": "",
 	"Manage Models": "मॉडल प्रबंधित करें",
 	"Manage Ollama Models": "Ollama मॉडल प्रबंधित करें",
 	"Manage Pipelines": "पाइपलाइनों का प्रबंधन करें",
@@ -481,6 +493,7 @@
 	"to": "तक",
 	"To access the available model names for downloading,": "डाउनलोड करने के लिए उपलब्ध मॉडल नामों तक पहुंचने के लिए,",
 	"To access the GGUF models available for downloading,": "डाउनलोडिंग के लिए उपलब्ध GGUF मॉडल तक पहुँचने के लिए,",
+	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "",
 	"to chat input.": "इनपुट चैट करने के लिए.",
 	"Today": "आज",
 	"Toggle settings": "सेटिंग्स टॉगल करें",
@@ -532,11 +545,13 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "50 शब्दों में एक सारांश लिखें जो [विषय या कीवर्ड] का सारांश प्रस्तुत करता हो।",
 	"Yesterday": "कल",
 	"You": "आप",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "आप बेस मॉडल का क्लोन नहीं बना सकते",
 	"You have no archived conversations.": "आपको कोई अंकित चैट नहीं है।",
 	"You have shared this chat": "आपने इस चैट को शेयर किया है",
 	"You're a helpful assistant.": "आप एक सहायक सहायक हैं",
 	"You're now logged in.": "अब आप लॉग इन हो गए हैं",
+	"Your account status is currently pending activation.": "",
 	"Youtube": "Youtube",
 	"Youtube Loader Settings": "यूट्यूब लोडर सेटिंग्स"
 }
