--- a/src/lib/i18n/locales/hr-HR/translation.json
+++ b/src/lib/i18n/locales/hr-HR/translation.json
@@ -12,6 +12,7 @@
 	"a user": "korisnik",
 	"About": "O aplikaciji",
 	"Account": "Račun",
+	"Account Activation Pending": "",
 	"Accurate information": "Točne informacije",
 	"Active Users": "",
 	"Add": "Dodaj",
@@ -22,6 +23,7 @@
 	"Add custom prompt": "Dodaj prilagođeni prompt",
 	"Add Docs": "Dodaj dokumente",
 	"Add Files": "Dodaj datoteke",
+	"Add memory": "",
 	"Add Memory": "Dodaj memoriju",
 	"Add message": "Dodaj poruku",
 	"Add Model": "Dodaj model",
@@ -88,8 +90,10 @@
 	"Chunk Params": "Parametri dijelova",
 	"Chunk Size": "Veličina dijela",
 	"Citation": "Citiranje",
+	"Clear memory": "",
 	"Click here for help.": "Kliknite ovdje za pomoć.",
 	"Click here to": "Kliknite ovdje za",
+	"Click here to download user import template file.": "",
 	"Click here to select": "Kliknite ovdje za odabir",
 	"Click here to select a csv file.": "Kliknite ovdje da odaberete csv datoteku.",
 	"Click here to select documents.": "Kliknite ovdje da odaberete dokumente.",
@@ -105,6 +109,7 @@
 	"Concurrent Requests": "Istodobni zahtjevi",
 	"Confirm Password": "Potvrdite lozinku",
 	"Connections": "Povezivanja",
+	"Contact Admin for WebUI Access": "",
 	"Content": "Sadržaj",
 	"Context Length": "Dužina konteksta",
 	"Continue Response": "Nastavi odgovor",
@@ -122,6 +127,7 @@
 	"Create new secret key": "Stvori novi tajni ključ",
 	"Created at": "Stvoreno",
 	"Created At": "Stvoreno",
+	"CSV Import": "",
 	"Current Model": "Trenutni model",
 	"Current Password": "Trenutna lozinka",
 	"Custom": "Prilagođeno",
@@ -207,12 +213,15 @@
 	"Error": "Greška",
 	"Experimental": "Eksperimentalno",
 	"Export": "Izvoz",
+	"Export All Archived Chats": "",
 	"Export All Chats (All Users)": "Izvoz svih razgovora (svi korisnici)",
 	"Export chat (.json)": "",
 	"Export Chats": "Izvoz razgovora",
 	"Export Documents Mapping": "Izvoz mapiranja dokumenata",
+	"Export LiteLLM config.yaml": "",
 	"Export Models": "Izvezi modele",
 	"Export Prompts": "Izvoz prompta",
+	"External Models": "",
 	"Failed to create API Key.": "Neuspješno stvaranje API ključa.",
 	"Failed to read clipboard contents": "Neuspješno čitanje sadržaja međuspremnika",
 	"Failed to update settings": "",
@@ -224,6 +233,7 @@
 	"Fluidly stream large external response chunks": "Glavno strujanje velikih vanjskih dijelova odgovora",
 	"Focus chat input": "Fokusiraj unos razgovora",
 	"Followed instructions perfectly": "Savršeno slijedio upute",
+	"Form": "",
 	"Format your variables using square brackets like this:": "Formatirajte svoje varijable pomoću uglatih zagrada ovako:",
 	"Frequency Penalty": "Kazna za učestalost",
 	"General": "Općenito",
@@ -269,9 +279,11 @@
 	"Light": "Svijetlo",
 	"Listening...": "Slušam...",
 	"LLMs can make mistakes. Verify important information.": "LLM-ovi mogu pogriješiti. Provjerite važne informacije.",
+	"Local Models": "",
 	"LTR": "LTR",
 	"Made by OpenWebUI Community": "Izradio OpenWebUI Community",
 	"Make sure to enclose them with": "Provjerite da ih zatvorite s",
+	"Manage": "",
 	"Manage Models": "Upravljanje modelima",
 	"Manage Ollama Models": "Upravljanje Ollama modelima",
 	"Manage Pipelines": "Upravljanje cjevovodima",
@@ -482,6 +494,7 @@
 	"to": "do",
 	"To access the available model names for downloading,": "Za pristup dostupnim nazivima modela za preuzimanje,",
 	"To access the GGUF models available for downloading,": "Za pristup GGUF modelima dostupnim za preuzimanje,",
+	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "",
 	"to chat input.": "u unos razgovora.",
 	"Today": "Danas",
 	"Toggle settings": "Prebaci postavke",
@@ -533,11 +546,13 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Napišite sažetak u 50 riječi koji sažima [temu ili ključnu riječ].",
 	"Yesterday": "Jučer",
 	"You": "Vi",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "Ne možete klonirati osnovni model",
 	"You have no archived conversations.": "Nemate arhiviranih razgovora.",
 	"You have shared this chat": "Podijelili ste ovaj razgovor",
 	"You're a helpful assistant.": "Vi ste korisni asistent.",
 	"You're now logged in.": "Sada ste prijavljeni.",
+	"Your account status is currently pending activation.": "",
 	"Youtube": "YouTube",
 	"Youtube Loader Settings": "YouTube postavke učitavanja"
 }
