--- a/src/lib/i18n/locales/it-IT/translation.json
+++ b/src/lib/i18n/locales/it-IT/translation.json
@@ -12,6 +12,7 @@
 	"a user": "un utente",
 	"About": "Informazioni",
 	"Account": "Account",
+	"Account Activation Pending": "",
 	"Accurate information": "Informazioni accurate",
 	"Active Users": "",
 	"Add": "Aggiungi",
@@ -22,6 +23,7 @@
 	"Add custom prompt": "Aggiungi un prompt custom",
 	"Add Docs": "Aggiungi documenti",
 	"Add Files": "Aggiungi file",
+	"Add memory": "",
 	"Add Memory": "Aggiungi memoria",
 	"Add message": "Aggiungi messaggio",
 	"Add Model": "Aggiungi modello",
@@ -88,8 +90,10 @@
 	"Chunk Params": "Parametri chunk",
 	"Chunk Size": "Dimensione chunk",
 	"Citation": "Citazione",
+	"Clear memory": "",
 	"Click here for help.": "Clicca qui per aiuto.",
 	"Click here to": "Clicca qui per",
+	"Click here to download user import template file.": "",
 	"Click here to select": "Clicca qui per selezionare",
 	"Click here to select a csv file.": "Clicca qui per selezionare un file csv.",
 	"Click here to select documents.": "Clicca qui per selezionare i documenti.",
@@ -105,6 +109,7 @@
 	"Concurrent Requests": "Richieste simultanee",
 	"Confirm Password": "Conferma password",
 	"Connections": "Connessioni",
+	"Contact Admin for WebUI Access": "",
 	"Content": "Contenuto",
 	"Context Length": "Lunghezza contesto",
 	"Continue Response": "Continua risposta",
@@ -122,6 +127,7 @@
 	"Create new secret key": "Crea nuova chiave segreta",
 	"Created at": "Creato il",
 	"Created At": "Creato il",
+	"CSV Import": "",
 	"Current Model": "Modello corrente",
 	"Current Password": "Password corrente",
 	"Custom": "Personalizzato",
@@ -207,12 +213,15 @@
 	"Error": "Errore",
 	"Experimental": "Sperimentale",
 	"Export": "Esportazione",
+	"Export All Archived Chats": "",
 	"Export All Chats (All Users)": "Esporta tutte le chat (tutti gli utenti)",
 	"Export chat (.json)": "",
 	"Export Chats": "Esporta chat",
 	"Export Documents Mapping": "Esporta mappatura documenti",
+	"Export LiteLLM config.yaml": "",
 	"Export Models": "Esporta modelli",
 	"Export Prompts": "Esporta prompt",
+	"External Models": "",
 	"Failed to create API Key.": "Impossibile creare la chiave API.",
 	"Failed to read clipboard contents": "Impossibile leggere il contenuto degli appunti",
 	"Failed to update settings": "",
@@ -224,6 +233,7 @@
 	"Fluidly stream large external response chunks": "Trasmetti in modo fluido blocchi di risposta esterni di grandi dimensioni",
 	"Focus chat input": "Metti a fuoco l'input della chat",
 	"Followed instructions perfectly": "Ha seguito le istruzioni alla perfezione",
+	"Form": "",
 	"Format your variables using square brackets like this:": "Formatta le tue variabili usando parentesi quadre come questa:",
 	"Frequency Penalty": "Penalità di frequenza",
 	"General": "Generale",
@@ -269,9 +279,11 @@
 	"Light": "Chiaro",
 	"Listening...": "Ascolto...",
 	"LLMs can make mistakes. Verify important information.": "Gli LLM possono commettere errori. Verifica le informazioni importanti.",
+	"Local Models": "",
 	"LTR": "LTR",
 	"Made by OpenWebUI Community": "Realizzato dalla comunità OpenWebUI",
 	"Make sure to enclose them with": "Assicurati di racchiuderli con",
+	"Manage": "",
 	"Manage Models": "Gestisci modelli",
 	"Manage Ollama Models": "Gestisci modelli Ollama",
 	"Manage Pipelines": "Gestire le pipeline",
@@ -482,6 +494,7 @@
 	"to": "a",
 	"To access the available model names for downloading,": "Per accedere ai nomi dei modelli disponibili per il download,",
 	"To access the GGUF models available for downloading,": "Per accedere ai modelli GGUF disponibili per il download,",
+	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "",
 	"to chat input.": "all'input della chat.",
 	"Today": "Oggi",
 	"Toggle settings": "Attiva/disattiva impostazioni",
@@ -533,11 +546,13 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Scrivi un riassunto in 50 parole che riassume [argomento o parola chiave].",
 	"Yesterday": "Ieri",
 	"You": "Tu",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "Non è possibile clonare un modello di base",
 	"You have no archived conversations.": "Non hai conversazioni archiviate.",
 	"You have shared this chat": "Hai condiviso questa chat",
 	"You're a helpful assistant.": "Sei un assistente utile.",
 	"You're now logged in.": "Ora hai effettuato l'accesso.",
+	"Your account status is currently pending activation.": "",
 	"Youtube": "Youtube",
 	"Youtube Loader Settings": "Impostazioni del caricatore Youtube"
 }
