--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -12,6 +12,7 @@
 	"a user": "ユーザー",
 	"About": "概要",
 	"Account": "アカウント",
+	"Account Activation Pending": "",
 	"Accurate information": "情報の正確性",
 	"Active Users": "",
 	"Add": "追加",
@@ -22,6 +23,7 @@
 	"Add custom prompt": "カスタムプロンプトを追加",
 	"Add Docs": "ドキュメントを追加",
 	"Add Files": "ファイルを追加",
+	"Add memory": "",
 	"Add Memory": "メモリを追加",
 	"Add message": "メッセージを追加",
 	"Add Model": "モデルを追加",
@@ -88,8 +90,10 @@
 	"Chunk Params": "チャンクパラメーター",
 	"Chunk Size": "チャンクサイズ",
 	"Citation": "引用文",
+	"Clear memory": "",
 	"Click here for help.": "ヘルプについてはここをクリックしてください。",
 	"Click here to": "ここをクリックして",
+	"Click here to download user import template file.": "",
 	"Click here to select": "選択するにはここをクリックしてください",
 	"Click here to select a csv file.": "CSVファイルを選択するにはここをクリックしてください。",
 	"Click here to select documents.": "ドキュメントを選択するにはここをクリックしてください。",
@@ -105,6 +109,7 @@
 	"Concurrent Requests": "コンカレント要求",
 	"Confirm Password": "パスワードを確認",
 	"Connections": "接続",
+	"Contact Admin for WebUI Access": "",
 	"Content": "コンテンツ",
 	"Context Length": "コンテキストの長さ",
 	"Continue Response": "続きの応答",
@@ -122,6 +127,7 @@
 	"Create new secret key": "新しいシークレットキーを作成",
 	"Created at": "作成日時",
 	"Created At": "作成日時",
+	"CSV Import": "",
 	"Current Model": "現在のモデル",
 	"Current Password": "現在のパスワード",
 	"Custom": "カスタム",
@@ -207,12 +213,15 @@
 	"Error": "エラー",
 	"Experimental": "実験的",
 	"Export": "輸出",
+	"Export All Archived Chats": "",
 	"Export All Chats (All Users)": "すべてのチャットをエクスポート (すべてのユーザー)",
 	"Export chat (.json)": "",
 	"Export Chats": "チャットをエクスポート",
 	"Export Documents Mapping": "ドキュメントマッピングをエクスポート",
+	"Export LiteLLM config.yaml": "",
 	"Export Models": "モデルのエクスポート",
 	"Export Prompts": "プロンプトをエクスポート",
+	"External Models": "",
 	"Failed to create API Key.": "APIキーの作成に失敗しました。",
 	"Failed to read clipboard contents": "クリップボードの内容を読み取れませんでした",
 	"Failed to update settings": "",
@@ -224,6 +233,7 @@
 	"Fluidly stream large external response chunks": "大規模な外部応答チャンクを流動的にストリーミングする",
 	"Focus chat input": "チャット入力をフォーカス",
 	"Followed instructions perfectly": "完全に指示に従った",
+	"Form": "",
 	"Format your variables using square brackets like this:": "次のように角括弧を使用して変数をフォーマットします。",
 	"Frequency Penalty": "周波数ペナルティ",
 	"General": "一般",
@@ -269,9 +279,11 @@
 	"Light": "ライト",
 	"Listening...": "聞いています...",
 	"LLMs can make mistakes. Verify important information.": "LLM は間違いを犯す可能性があります。重要な情報を検証してください。",
+	"Local Models": "",
 	"LTR": "LTR",
 	"Made by OpenWebUI Community": "OpenWebUI コミュニティによって作成",
 	"Make sure to enclose them with": "必ず次で囲んでください",
+	"Manage": "",
 	"Manage Models": "モデルを管理",
 	"Manage Ollama Models": "Ollama モデルを管理",
 	"Manage Pipelines": "パイプラインの管理",
@@ -480,6 +492,7 @@
 	"to": "まで",
 	"To access the available model names for downloading,": "ダウンロード可能なモデル名にアクセスするには、",
 	"To access the GGUF models available for downloading,": "ダウンロード可能な GGUF モデルにアクセスするには、",
+	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "",
 	"to chat input.": "チャット入力へ。",
 	"Today": "今日",
 	"Toggle settings": "設定を切り替え",
@@ -531,11 +544,13 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "[トピックまたはキーワード] を要約する 50 語の概要を書いてください。",
 	"Yesterday": "昨日",
 	"You": "あなた",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "基本モデルのクローンを作成できない",
 	"You have no archived conversations.": "これまでにアーカイブされた会話はありません。",
 	"You have shared this chat": "このチャットを共有しました",
 	"You're a helpful assistant.": "あなたは役に立つアシスタントです。",
 	"You're now logged in.": "ログインしました。",
+	"Your account status is currently pending activation.": "",
 	"Youtube": "YouTube",
 	"Youtube Loader Settings": "Youtubeローダー設定"
 }
