--- a/src/lib/i18n/locales/ka-GE/translation.json
+++ b/src/lib/i18n/locales/ka-GE/translation.json
@@ -12,6 +12,7 @@
 	"a user": "მომხმარებელი",
 	"About": "შესახებ",
 	"Account": "ანგარიში",
+	"Account Activation Pending": "",
 	"Accurate information": "დიდი ინფორმაცია",
 	"Active Users": "",
 	"Add": "დამატება",
@@ -22,6 +23,7 @@
 	"Add custom prompt": "პირველადი მოთხოვნის დამატება",
 	"Add Docs": "დოკუმენტის დამატება",
 	"Add Files": "ფაილების დამატება",
+	"Add memory": "",
 	"Add Memory": "მემორიის დამატება",
 	"Add message": "შეტყობინების დამატება",
 	"Add Model": "მოდელის დამატება",
@@ -88,8 +90,10 @@
 	"Chunk Params": "გადახურვის პარამეტრები",
 	"Chunk Size": "გადახურვის ზომა",
 	"Citation": "ციტატა",
+	"Clear memory": "",
 	"Click here for help.": "დახმარებისთვის, დააკლიკე აქ",
 	"Click here to": "დააკლიკე აქ",
+	"Click here to download user import template file.": "",
 	"Click here to select": "ასარჩევად, დააკლიკე აქ",
 	"Click here to select a csv file.": "ასარჩევად, დააკლიკე აქ",
 	"Click here to select documents.": "დოკუმენტების ასარჩევად, დააკლიკე აქ",
@@ -105,6 +109,7 @@
 	"Concurrent Requests": "თანმხლები მოთხოვნები",
 	"Confirm Password": "პაროლის დამოწმება",
 	"Connections": "კავშირები",
+	"Contact Admin for WebUI Access": "",
 	"Content": "კონტენტი",
 	"Context Length": "კონტექსტის სიგრძე",
 	"Continue Response": "პასუხის გაგრძელება",
@@ -122,6 +127,7 @@
 	"Create new secret key": "პირადი ღირებულბრის შექმნა",
 	"Created at": "შექმნილია",
 	"Created At": "შექმნილია",
+	"CSV Import": "",
 	"Current Model": "მიმდინარე მოდელი",
 	"Current Password": "მიმდინარე პაროლი",
 	"Custom": "საკუთარი",
@@ -207,12 +213,15 @@
 	"Error": "შეცდომა",
 	"Experimental": "ექსპერიმენტალური",
 	"Export": "ექსპორტი",
+	"Export All Archived Chats": "",
 	"Export All Chats (All Users)": "ექსპორტი ყველა ჩათი (ყველა მომხმარებელი)",
 	"Export chat (.json)": "",
 	"Export Chats": "მიმოწერის ექსპორტირება",
 	"Export Documents Mapping": "დოკუმენტების კავშირის ექსპორტი",
+	"Export LiteLLM config.yaml": "",
 	"Export Models": "ექსპორტის მოდელები",
 	"Export Prompts": "მოთხოვნების ექსპორტი",
+	"External Models": "",
 	"Failed to create API Key.": "API ღილაკის შექმნა ვერ მოხერხდა.",
 	"Failed to read clipboard contents": "ბუფერში შიგთავსის წაკითხვა ვერ მოხერხდა",
 	"Failed to update settings": "",
@@ -224,6 +233,7 @@
 	"Fluidly stream large external response chunks": "თხევადი ნაკადი დიდი გარე საპასუხო ნაწილაკების",
 	"Focus chat input": "ჩეთის შეყვანის ფოკუსი",
 	"Followed instructions perfectly": "ყველა ინსტრუქცია უზრუნველყოფა",
+	"Form": "",
 	"Format your variables using square brackets like this:": "დააფორმატეთ თქვენი ცვლადები კვადრატული ფრჩხილების გამოყენებით:",
 	"Frequency Penalty": "სიხშირის ჯარიმა",
 	"General": "ზოგადი",
@@ -269,9 +279,11 @@
 	"Light": "მსუბუქი",
 	"Listening...": "გისმენ...",
 	"LLMs can make mistakes. Verify important information.": "შესაძლოა LLM-ებმა შეცდომები დაუშვან. გადაამოწმეთ მნიშვნელოვანი ინფორმაცია.",
+	"Local Models": "",
 	"LTR": "LTR",
 	"Made by OpenWebUI Community": "დამზადებულია OpenWebUI საზოგადოების მიერ",
 	"Make sure to enclose them with": "დარწმუნდით, რომ დაურთეთ ისინი",
+	"Manage": "",
 	"Manage Models": "მოდელების მართვა",
 	"Manage Ollama Models": "Ollama მოდელების მართვა",
 	"Manage Pipelines": "მილსადენების მართვა",
@@ -481,6 +493,7 @@
 	"to": "ში",
 	"To access the available model names for downloading,": "ჩამოტვირთვისთვის ხელმისაწვდომი მოდელების სახელებზე წვდომისთვის",
 	"To access the GGUF models available for downloading,": "ჩასატვირთად ხელმისაწვდომი GGUF მოდელებზე წვდომისთვის",
+	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "",
 	"to chat input.": "ჩატში",
 	"Today": "დღეს",
 	"Toggle settings": "პარამეტრების გადართვა",
@@ -532,11 +545,13 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "დაწერეთ რეზიუმე 50 სიტყვით, რომელიც აჯამებს [თემას ან საკვანძო სიტყვას].",
 	"Yesterday": "აღდგენა",
 	"You": "ჩემი",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "თქვენ არ შეგიძლიათ ბაზის მოდელის კლონირება",
 	"You have no archived conversations.": "არ ხართ არქივირებული განხილვები.",
 	"You have shared this chat": "ამ ჩატის გააგზავნა",
 	"You're a helpful assistant.": "თქვენ სასარგებლო ასისტენტი ხართ.",
 	"You're now logged in.": "თქვენ შესული ხართ.",
+	"Your account status is currently pending activation.": "",
 	"Youtube": "Youtube",
 	"Youtube Loader Settings": "Youtube Loader Settings"
 }
