--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -12,6 +12,7 @@
 	"a user": "사용자",
 	"About": "소개",
 	"Account": "계정",
+	"Account Activation Pending": "",
 	"Accurate information": "정확한 정보",
 	"Active Users": "",
 	"Add": "추가",
@@ -22,6 +23,7 @@
 	"Add custom prompt": "프롬프트 추가",
 	"Add Docs": "문서 추가",
 	"Add Files": "파일 추가",
+	"Add memory": "",
 	"Add Memory": "메모리 추가",
 	"Add message": "메시지 추가",
 	"Add Model": "모델 추가",
@@ -88,8 +90,10 @@
 	"Chunk Params": "Chunk Params",
 	"Chunk Size": "Chunk Size",
 	"Citation": "인용",
+	"Clear memory": "",
 	"Click here for help.": "도움말을 보려면 여기를 클릭하세요.",
 	"Click here to": "여기를 클릭하면",
+	"Click here to download user import template file.": "",
 	"Click here to select": "선택하려면 여기를 클릭하세요.",
 	"Click here to select a csv file.": "csv 파일을 선택하려면 여기를 클릭하세요.",
 	"Click here to select documents.": "문서를 선택하려면 여기를 클릭하세요.",
@@ -105,6 +109,7 @@
 	"Concurrent Requests": "동시 요청",
 	"Confirm Password": "비밀번호 확인",
 	"Connections": "연결",
+	"Contact Admin for WebUI Access": "",
 	"Content": "내용",
 	"Context Length": "내용 길이",
 	"Continue Response": "대화 계속",
@@ -122,6 +127,7 @@
 	"Create new secret key": "새 비밀 키 만들기",
 	"Created at": "생성일",
 	"Created At": "생성일",
+	"CSV Import": "",
 	"Current Model": "현재 모델",
 	"Current Password": "현재 비밀번호",
 	"Custom": "사용자 정의",
@@ -207,12 +213,15 @@
 	"Error": "오류",
 	"Experimental": "실험적",
 	"Export": "수출",
+	"Export All Archived Chats": "",
 	"Export All Chats (All Users)": "모든 채팅 내보내기 (모든 사용자)",
 	"Export chat (.json)": "",
 	"Export Chats": "채팅 내보내기",
 	"Export Documents Mapping": "문서 매핑 내보내기",
+	"Export LiteLLM config.yaml": "",
 	"Export Models": "모델 내보내기",
 	"Export Prompts": "프롬프트 내보내기",
+	"External Models": "",
 	"Failed to create API Key.": "API 키 생성에 실패했습니다.",
 	"Failed to read clipboard contents": "클립보드 내용을 읽는 데 실패했습니다.",
 	"Failed to update settings": "",
@@ -224,6 +233,7 @@
 	"Fluidly stream large external response chunks": "대규모 외부 응답 청크를 유동적으로 스트리밍",
 	"Focus chat input": "채팅 입력 포커스",
 	"Followed instructions perfectly": "명령을 완벽히 따름",
+	"Form": "",
 	"Format your variables using square brackets like this:": "이렇게 대괄호를 사용하여 변수를 형식화하세요:",
 	"Frequency Penalty": "주파수 페널티",
 	"General": "일반",
@@ -269,9 +279,11 @@
 	"Light": "밝음",
 	"Listening...": "청취 중...",
 	"LLMs can make mistakes. Verify important information.": "LLM은 실수를 할 수 있습니다. 중요한 정보를 확인하세요.",
+	"Local Models": "",
 	"LTR": "LTR",
 	"Made by OpenWebUI Community": "OpenWebUI 커뮤니티에서 제작",
 	"Make sure to enclose them with": "다음으로 묶는 것을 잊지 마세요:",
+	"Manage": "",
 	"Manage Models": "모델 관리",
 	"Manage Ollama Models": "Ollama 모델 관리",
 	"Manage Pipelines": "파이프라인 관리",
@@ -480,6 +492,7 @@
 	"to": "~까지",
 	"To access the available model names for downloading,": "다운로드 가능한 모델명을 확인하려면,",
 	"To access the GGUF models available for downloading,": "다운로드 가능한 GGUF 모델을 확인하려면,",
+	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "",
 	"to chat input.": "채팅 입력으로.",
 	"Today": "오늘",
 	"Toggle settings": "설정 전환",
@@ -531,11 +544,13 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "[주제 또는 키워드]에 대한 50단어 요약문 작성.",
 	"Yesterday": "어제",
 	"You": "당신",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "기본 모델은 복제할 수 없습니다",
 	"You have no archived conversations.": "채팅을 아카이브한 적이 없습니다.",
 	"You have shared this chat": "이 채팅을 공유했습니다.",
 	"You're a helpful assistant.": "당신은 유용한 어시스턴트입니다.",
 	"You're now logged in.": "로그인되었습니다.",
+	"Your account status is currently pending activation.": "",
 	"Youtube": "유튜브",
 	"Youtube Loader Settings": "유튜브 로더 설정"
 }
