--- a/src/lib/i18n/locales/lt-LT/translation.json
+++ b/src/lib/i18n/locales/lt-LT/translation.json
@@ -12,6 +12,7 @@
 	"a user": "naudotojas",
 	"About": "Apie",
 	"Account": "Paskyra",
+	"Account Activation Pending": "",
 	"Accurate information": "Tiksli informacija",
 	"Active Users": "",
 	"Add": "",
@@ -22,6 +23,7 @@
 	"Add custom prompt": "Pridėti užklausos šabloną",
 	"Add Docs": "Pridėti dokumentų",
 	"Add Files": "Pridėti failus",
+	"Add memory": "",
 	"Add Memory": "",
 	"Add message": "Pridėti žinutę",
 	"Add Model": "Pridėti modelį",
@@ -88,8 +90,10 @@
 	"Chunk Params": "Blokų nustatymai",
 	"Chunk Size": "Blokų dydis",
 	"Citation": "Citata",
+	"Clear memory": "",
 	"Click here for help.": "Paspauskite čia dėl pagalbos.",
 	"Click here to": "Paspauskite čia, kad:",
+	"Click here to download user import template file.": "",
 	"Click here to select": "Spauskite čia norėdami pasirinkti",
 	"Click here to select a csv file.": "Spauskite čia tam, kad pasirinkti csv failą",
 	"Click here to select documents.": "Spauskite čia norėdami pasirinkti dokumentus.",
@@ -105,6 +109,7 @@
 	"Concurrent Requests": "",
 	"Confirm Password": "Patvirtinkite slaptažodį",
 	"Connections": "Ryšiai",
+	"Contact Admin for WebUI Access": "",
 	"Content": "Turinys",
 	"Context Length": "Konteksto ilgis",
 	"Continue Response": "Tęsti atsakymą",
@@ -122,6 +127,7 @@
 	"Create new secret key": "Sukurti naują slaptą raktą",
 	"Created at": "Sukurta",
 	"Created At": "Sukurta",
+	"CSV Import": "",
 	"Current Model": "Dabartinis modelis",
 	"Current Password": "Esamas slaptažodis",
 	"Custom": "Personalizuota",
@@ -207,12 +213,15 @@
 	"Error": "",
 	"Experimental": "Eksperimentinis",
 	"Export": "",
+	"Export All Archived Chats": "",
 	"Export All Chats (All Users)": "Eksportuoti visų naudotojų visus pokalbius",
 	"Export chat (.json)": "",
 	"Export Chats": "Eksportuoti pokalbius",
 	"Export Documents Mapping": "Eksportuoti dokumentų žemėlapį",
+	"Export LiteLLM config.yaml": "",
 	"Export Models": "",
 	"Export Prompts": "Eksportuoti užklausas",
+	"External Models": "",
 	"Failed to create API Key.": "Nepavyko sukurti API rakto",
 	"Failed to read clipboard contents": "Nepavyko perskaityti kopijuoklės",
 	"Failed to update settings": "",
@@ -224,6 +233,7 @@
 	"Fluidly stream large external response chunks": "Sklandžiai transliuoti ilgus atsakymus",
 	"Focus chat input": "Fokusuoti žinutės įvestį",
 	"Followed instructions perfectly": "Tobulai sekė instrukcijas",
+	"Form": "",
 	"Format your variables using square brackets like this:": "Formatuokite kintamuosius su kvadratiniais skliausteliais:",
 	"Frequency Penalty": "",
 	"General": "Bendri",
@@ -269,9 +279,11 @@
 	"Light": "Šviesus",
 	"Listening...": "Klauso...",
 	"LLMs can make mistakes. Verify important information.": "Dideli kalbos modeliai gali klysti. Patikrinkite atsakymų teisingumą.",
+	"Local Models": "",
 	"LTR": "",
 	"Made by OpenWebUI Community": "Sukurta OpenWebUI bendruomenės",
 	"Make sure to enclose them with": "Užtikrinktie, kad įtraukiate viduje:",
+	"Manage": "",
 	"Manage Models": "Tvarkyti modelius",
 	"Manage Ollama Models": "Tvarkyti Ollama modelius",
 	"Manage Pipelines": "",
@@ -483,6 +495,7 @@
 	"to": "kam",
 	"To access the available model names for downloading,": "Tam, kad prieiti prie galimų parsisiųsti modelių",
 	"To access the GGUF models available for downloading,": "Tam, kad prieiti prie galimų parsisiųsti GGUF,",
+	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "",
 	"to chat input.": "į pokalbio įvestį",
 	"Today": "Šiandien",
 	"Toggle settings": "Atverti/užverti parametrus",
@@ -534,11 +547,13 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Parašyk santrumpą trumpesnę nei 50 žodžių šiam tekstui: [tekstas]",
 	"Yesterday": "Vakar",
 	"You": "Jūs",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "",
 	"You have no archived conversations.": "Jūs neturite archyvuotų pokalbių",
 	"You have shared this chat": "Pasidalinote šiuo pokalbiu",
 	"You're a helpful assistant.": "Esi asistentas.",
 	"You're now logged in.": "Esate prisijungę.",
+	"Your account status is currently pending activation.": "",
 	"Youtube": "Youtube",
 	"Youtube Loader Settings": "Youtube krovimo nustatymai"
 }
