--- a/src/lib/i18n/locales/nb-NO/translation.json
+++ b/src/lib/i18n/locales/nb-NO/translation.json
@@ -12,6 +12,7 @@
 	"a user": "en bruker",
 	"About": "Om",
 	"Account": "Konto",
+	"Account Activation Pending": "",
 	"Accurate information": "Nøyaktig informasjon",
 	"Active Users": "",
 	"Add": "Legg til",
@@ -22,6 +23,7 @@
 	"Add custom prompt": "Legg til egendefinert prompt",
 	"Add Docs": "Legg til dokumenter",
 	"Add Files": "Legg til filer",
+	"Add memory": "",
 	"Add Memory": "Legg til minne",
 	"Add message": "Legg til melding",
 	"Add Model": "Legg til modell",
@@ -88,8 +90,10 @@
 	"Chunk Params": "Chunk-parametere",
 	"Chunk Size": "Chunk-størrelse",
 	"Citation": "Sitering",
+	"Clear memory": "",
 	"Click here for help.": "Klikk her for hjelp.",
 	"Click here to": "Klikk her for å",
+	"Click here to download user import template file.": "",
 	"Click here to select": "Klikk her for å velge",
 	"Click here to select a csv file.": "Klikk her for å velge en csv-fil.",
 	"Click here to select documents.": "Klikk her for å velge dokumenter.",
@@ -105,6 +109,7 @@
 	"Concurrent Requests": "Samtidige forespørsler",
 	"Confirm Password": "Bekreft passord",
 	"Connections": "Tilkoblinger",
+	"Contact Admin for WebUI Access": "",
 	"Content": "Innhold",
 	"Context Length": "Kontekstlengde",
 	"Continue Response": "Fortsett svar",
@@ -122,6 +127,7 @@
 	"Create new secret key": "Lag ny hemmelig nøkkel",
 	"Created at": "Opprettet",
 	"Created At": "Opprettet",
+	"CSV Import": "",
 	"Current Model": "Nåværende modell",
 	"Current Password": "Nåværende passord",
 	"Custom": "Tilpasset",
@@ -207,12 +213,15 @@
 	"Error": "Feil",
 	"Experimental": "Eksperimentell",
 	"Export": "Eksporter",
+	"Export All Archived Chats": "",
 	"Export All Chats (All Users)": "Eksporter alle chatter (alle brukere)",
 	"Export chat (.json)": "Eksporter chat (.json)",
 	"Export Chats": "Eksporter chatter",
 	"Export Documents Mapping": "Eksporter dokumentkartlegging",
+	"Export LiteLLM config.yaml": "",
 	"Export Models": "Eksporter modeller",
 	"Export Prompts": "Eksporter prompts",
+	"External Models": "",
 	"Failed to create API Key.": "Kunne ikke opprette API-nøkkel.",
 	"Failed to read clipboard contents": "Kunne ikke lese utklippstavleinnhold",
 	"Failed to update settings": "Kunne ikke oppdatere innstillinger",
@@ -224,6 +233,7 @@
 	"Fluidly stream large external response chunks": "Strøm store eksterne svarchunks flytende",
 	"Focus chat input": "Fokuser chatinput",
 	"Followed instructions perfectly": "Fulgte instruksjonene perfekt",
+	"Form": "",
 	"Format your variables using square brackets like this:": "Formatér variablene dine med hakeparenteser som dette:",
 	"Frequency Penalty": "Frekvensstraff",
 	"General": "Generelt",
@@ -269,9 +279,11 @@
 	"Light": "Lys",
 	"Listening...": "Lytter...",
 	"LLMs can make mistakes. Verify important information.": "LLM-er kan gjøre feil. Verifiser viktig informasjon.",
+	"Local Models": "",
 	"LTR": "LTR",
 	"Made by OpenWebUI Community": "Laget av OpenWebUI-fellesskapet",
 	"Make sure to enclose them with": "Sørg for å omslutte dem med",
+	"Manage": "",
 	"Manage Models": "Administrer modeller",
 	"Manage Ollama Models": "Administrer Ollama-modeller",
 	"Manage Pipelines": "Administrer pipelines",
@@ -481,6 +493,7 @@
 	"to": "til",
 	"To access the available model names for downloading,": "For å få tilgang til tilgjengelige modelnavn for nedlasting,",
 	"To access the GGUF models available for downloading,": "For å få tilgang til GGUF-modellene som er tilgjengelige for nedlasting,",
+	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "",
 	"to chat input.": "til chatinput.",
 	"Today": "I dag",
 	"Toggle settings": "Veksle innstillinger",
@@ -532,11 +545,13 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Skriv et sammendrag på 50 ord som oppsummerer [emne eller nøkkelord].",
 	"Yesterday": "I går",
 	"You": "Du",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "Du kan ikke klone en grunnmodell",
 	"You have no archived conversations.": "Du har ingen arkiverte samtaler.",
 	"You have shared this chat": "Du har delt denne chatten",
 	"You're a helpful assistant.": "Du er en hjelpsom assistent.",
 	"You're now logged in.": "Du er nå logget inn.",
+	"Your account status is currently pending activation.": "",
 	"Youtube": "Youtube",
 	"Youtube Loader Settings": "Youtube-lasterinnstillinger"
 }
