--- a/src/lib/i18n/locales/pl-PL/translation.json
+++ b/src/lib/i18n/locales/pl-PL/translation.json
@@ -12,6 +12,7 @@
 	"a user": "użytkownik",
 	"About": "O nas",
 	"Account": "Konto",
+	"Account Activation Pending": "",
 	"Accurate information": "Dokładna informacja",
 	"Active Users": "",
 	"Add": "Dodaj",
@@ -22,6 +23,7 @@
 	"Add custom prompt": "Dodaj własne polecenie",
 	"Add Docs": "Dodaj dokumenty",
 	"Add Files": "Dodaj pliki",
+	"Add memory": "",
 	"Add Memory": "Dodaj pamięć",
 	"Add message": "Dodaj wiadomość",
 	"Add Model": "Dodaj model",
@@ -88,8 +90,10 @@
 	"Chunk Params": "Parametry bloku",
 	"Chunk Size": "Rozmiar bloku",
 	"Citation": "Cytat",
+	"Clear memory": "",
 	"Click here for help.": "Kliknij tutaj, aby uzyskać pomoc.",
 	"Click here to": "Kliknij tutaj, żeby",
+	"Click here to download user import template file.": "",
 	"Click here to select": "Kliknij tutaj, aby wybrać",
 	"Click here to select a csv file.": "Kliknij tutaj, żeby wybrać plik CSV",
 	"Click here to select documents.": "Kliknij tutaj, aby wybrać dokumenty.",
@@ -105,6 +109,7 @@
 	"Concurrent Requests": "Równoczesne żądania",
 	"Confirm Password": "Potwierdź hasło",
 	"Connections": "Połączenia",
+	"Contact Admin for WebUI Access": "",
 	"Content": "Zawartość",
 	"Context Length": "Długość kontekstu",
 	"Continue Response": "Kontynuuj odpowiedź",
@@ -122,6 +127,7 @@
 	"Create new secret key": "Utwórz nowy klucz bezpieczeństwa",
 	"Created at": "Utworzono o",
 	"Created At": "Utworzono o",
+	"CSV Import": "",
 	"Current Model": "Bieżący model",
 	"Current Password": "Bieżące hasło",
 	"Custom": "Niestandardowy",
@@ -207,12 +213,15 @@
 	"Error": "Błąd",
 	"Experimental": "Eksperymentalne",
 	"Export": "Eksport",
+	"Export All Archived Chats": "",
 	"Export All Chats (All Users)": "Eksportuj wszystkie czaty (wszyscy użytkownicy)",
 	"Export chat (.json)": "",
 	"Export Chats": "Eksportuj czaty",
 	"Export Documents Mapping": "Eksportuj mapowanie dokumentów",
+	"Export LiteLLM config.yaml": "",
 	"Export Models": "Eksportuj modele",
 	"Export Prompts": "Eksportuj prompty",
+	"External Models": "",
 	"Failed to create API Key.": "Nie udało się utworzyć klucza API.",
 	"Failed to read clipboard contents": "Nie udało się odczytać zawartości schowka",
 	"Failed to update settings": "",
@@ -224,6 +233,7 @@
 	"Fluidly stream large external response chunks": "Płynnie przesyłaj strumieniowo duże fragmenty odpowiedzi zewnętrznych",
 	"Focus chat input": "Skoncentruj na czacie",
 	"Followed instructions perfectly": "Postępował z idealnie według instrukcji",
+	"Form": "",
 	"Format your variables using square brackets like this:": "Formatuj swoje zmienne, używając nawiasów kwadratowych, np.",
 	"Frequency Penalty": "Kara za częstotliwość",
 	"General": "Ogólne",
@@ -269,9 +279,11 @@
 	"Light": "Jasny",
 	"Listening...": "Nasłuchiwanie...",
 	"LLMs can make mistakes. Verify important information.": "LLMy mogą popełniać błędy. Zweryfikuj ważne informacje.",
+	"Local Models": "",
 	"LTR": "LTR",
 	"Made by OpenWebUI Community": "Stworzone przez społeczność OpenWebUI",
 	"Make sure to enclose them with": "Upewnij się, że są one zamknięte w",
+	"Manage": "",
 	"Manage Models": "Zarządzaj modelami",
 	"Manage Ollama Models": "Zarządzaj modelami Ollama",
 	"Manage Pipelines": "Zarządzanie potokami",
@@ -483,6 +495,7 @@
 	"to": "do",
 	"To access the available model names for downloading,": "Aby uzyskać dostęp do dostępnych nazw modeli do pobrania,",
 	"To access the GGUF models available for downloading,": "Aby uzyskać dostęp do dostępnych modeli GGUF do pobrania,",
+	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "",
 	"to chat input.": "do pola wprowadzania czatu.",
 	"Today": "Dzisiaj",
 	"Toggle settings": "Przełącz ustawienia",
@@ -534,11 +547,13 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Napisz podsumowanie w 50 słowach, które podsumowuje [temat lub słowo kluczowe].",
 	"Yesterday": "Wczoraj",
 	"You": "Ty",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "Nie można sklonować modelu podstawowego",
 	"You have no archived conversations.": "Nie masz zarchiwizowanych rozmów.",
 	"You have shared this chat": "Udostępniłeś ten czat",
 	"You're a helpful assistant.": "Jesteś pomocnym asystentem.",
 	"You're now logged in.": "Jesteś teraz zalogowany.",
+	"Your account status is currently pending activation.": "",
 	"Youtube": "Youtube",
 	"Youtube Loader Settings": "Ustawienia pobierania z Youtube"
 }
