--- a/src/lib/i18n/locales/pt-BR/translation.json
+++ b/src/lib/i18n/locales/pt-BR/translation.json
@@ -12,6 +12,7 @@
 	"a user": "um usuário",
 	"About": "Sobre",
 	"Account": "Conta",
+	"Account Activation Pending": "",
 	"Accurate information": "Informações precisas",
 	"Active Users": "",
 	"Add": "Adicionar",
@@ -22,6 +23,7 @@
 	"Add custom prompt": "Adicionar prompt personalizado",
 	"Add Docs": "Adicionar Documentos",
 	"Add Files": "Adicionar Arquivos",
+	"Add memory": "",
 	"Add Memory": "Adicionar memória",
 	"Add message": "Adicionar mensagem",
 	"Add Model": "Adicionar modelo",
@@ -88,8 +90,10 @@
 	"Chunk Params": "Parâmetros de Fragmento",
 	"Chunk Size": "Tamanho do Fragmento",
 	"Citation": "Citação",
+	"Clear memory": "",
 	"Click here for help.": "Clique aqui para obter ajuda.",
 	"Click here to": "Clique aqui para",
+	"Click here to download user import template file.": "",
 	"Click here to select": "Clique aqui para selecionar",
 	"Click here to select a csv file.": "Clique aqui para selecionar um arquivo csv.",
 	"Click here to select documents.": "Clique aqui para selecionar documentos.",
@@ -105,6 +109,7 @@
 	"Concurrent Requests": "Solicitações simultâneas",
 	"Confirm Password": "Confirmar Senha",
 	"Connections": "Conexões",
+	"Contact Admin for WebUI Access": "",
 	"Content": "Conteúdo",
 	"Context Length": "Comprimento do Contexto",
 	"Continue Response": "Continuar resposta",
@@ -122,6 +127,7 @@
 	"Create new secret key": "Criar nova chave secreta",
 	"Created at": "Criado em",
 	"Created At": "Criado em",
+	"CSV Import": "",
 	"Current Model": "Modelo Atual",
 	"Current Password": "Senha Atual",
 	"Custom": "Personalizado",
@@ -207,12 +213,15 @@
 	"Error": "Erro",
 	"Experimental": "Experimental",
 	"Export": "Exportação",
+	"Export All Archived Chats": "",
 	"Export All Chats (All Users)": "Exportar Todos os Bate-papos (Todos os Usuários)",
 	"Export chat (.json)": "",
 	"Export Chats": "Exportar Bate-papos",
 	"Export Documents Mapping": "Exportar Mapeamento de Documentos",
+	"Export LiteLLM config.yaml": "",
 	"Export Models": "Modelos de Exportação",
 	"Export Prompts": "Exportar Prompts",
+	"External Models": "",
 	"Failed to create API Key.": "Falha ao criar a Chave da API.",
 	"Failed to read clipboard contents": "Falha ao ler o conteúdo da área de transferência",
 	"Failed to update settings": "",
@@ -224,6 +233,7 @@
 	"Fluidly stream large external response chunks": "Transmita com fluidez grandes blocos de resposta externa",
 	"Focus chat input": "Focar entrada de bate-papo",
 	"Followed instructions perfectly": "Seguiu instruções perfeitamente",
+	"Form": "",
 	"Format your variables using square brackets like this:": "Formate suas variáveis usando colchetes como este:",
 	"Frequency Penalty": "Penalidade de Frequência",
 	"General": "Geral",
@@ -269,9 +279,11 @@
 	"Light": "Claro",
 	"Listening...": "Ouvindo...",
 	"LLMs can make mistakes. Verify important information.": "LLMs podem cometer erros. Verifique informações importantes.",
+	"Local Models": "",
 	"LTR": "LTR",
 	"Made by OpenWebUI Community": "Feito pela Comunidade OpenWebUI",
 	"Make sure to enclose them with": "Certifique-se de colocá-los entre",
+	"Manage": "",
 	"Manage Models": "Gerenciar Modelos",
 	"Manage Ollama Models": "Gerenciar Modelos Ollama",
 	"Manage Pipelines": "Gerenciar pipelines",
@@ -482,6 +494,7 @@
 	"to": "para",
 	"To access the available model names for downloading,": "Para acessar os nomes de modelo disponíveis para download,",
 	"To access the GGUF models available for downloading,": "Para acessar os modelos GGUF disponíveis para download,",
+	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "",
 	"to chat input.": "para a entrada de bate-papo.",
 	"Today": "Hoje",
 	"Toggle settings": "Alternar configurações",
@@ -533,11 +546,13 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Escreva um resumo em 50 palavras que resuma [tópico ou palavra-chave].",
 	"Yesterday": "Ontem",
 	"You": "Você",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "Não é possível clonar um modelo base",
 	"You have no archived conversations.": "Você não tem conversas arquivadas.",
 	"You have shared this chat": "Você compartilhou esta conversa",
 	"You're a helpful assistant.": "Você é um assistente útil.",
 	"You're now logged in.": "Você está conectado agora.",
+	"Your account status is currently pending activation.": "",
 	"Youtube": "Youtube",
 	"Youtube Loader Settings": "Configurações do carregador do Youtube"
 }
