--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -12,6 +12,7 @@
 	"a user": "пользователь",
 	"About": "Об",
 	"Account": "Аккаунт",
+	"Account Activation Pending": "",
 	"Accurate information": "Точная информация",
 	"Active Users": "",
 	"Add": "Добавить",
@@ -22,6 +23,7 @@
 	"Add custom prompt": "Добавьте пользовательский ввод",
 	"Add Docs": "Добавьте документы",
 	"Add Files": "Добавьте файлы",
+	"Add memory": "",
 	"Add Memory": "Добавьте память",
 	"Add message": "Добавьте сообщение",
 	"Add Model": "Добавьте модель",
@@ -88,8 +90,10 @@
 	"Chunk Params": "Параметры фрагментов",
 	"Chunk Size": "Размер фрагмента",
 	"Citation": "Цитата",
+	"Clear memory": "",
 	"Click here for help.": "Нажмите здесь для помощи.",
 	"Click here to": "Нажмите здесь чтобы",
+	"Click here to download user import template file.": "",
 	"Click here to select": "Нажмите тут чтобы выберите",
 	"Click here to select a csv file.": "Нажмите здесь чтобы выбрать файл csv.",
 	"Click here to select documents.": "Нажмите здесь чтобы выберите документы.",
@@ -105,6 +109,7 @@
 	"Concurrent Requests": "Одновременные запросы",
 	"Confirm Password": "Подтвердите пароль",
 	"Connections": "Соединение",
+	"Contact Admin for WebUI Access": "",
 	"Content": "Содержание",
 	"Context Length": "Длина контексту",
 	"Continue Response": "Продолжить ответ",
@@ -122,6 +127,7 @@
 	"Create new secret key": "Создать новый секретный ключ",
 	"Created at": "Создано в",
 	"Created At": "Создано в",
+	"CSV Import": "",
 	"Current Model": "Текущая модель",
 	"Current Password": "Текущий пароль",
 	"Custom": "Пользовательский",
@@ -207,12 +213,15 @@
 	"Error": "Ошибка",
 	"Experimental": "Экспериментальное",
 	"Export": "Экспорт",
+	"Export All Archived Chats": "",
 	"Export All Chats (All Users)": "Экспортировать все чаты (все пользователи)",
 	"Export chat (.json)": "",
 	"Export Chats": "Экспортировать чаты",
 	"Export Documents Mapping": "Экспортировать отображение документов",
+	"Export LiteLLM config.yaml": "",
 	"Export Models": "Экспорт моделей",
 	"Export Prompts": "Экспортировать промты",
+	"External Models": "",
 	"Failed to create API Key.": "Не удалось создать ключ API.",
 	"Failed to read clipboard contents": "Не удалось прочитать содержимое буфера обмена",
 	"Failed to update settings": "",
@@ -224,6 +233,7 @@
 	"Fluidly stream large external response chunks": "Плавная потоковая передача больших фрагментов внешних ответов",
 	"Focus chat input": "Фокус ввода чата",
 	"Followed instructions perfectly": "Учитывая инструкции идеально",
+	"Form": "",
 	"Format your variables using square brackets like this:": "Форматируйте ваши переменные, используя квадратные скобки, как здесь:",
 	"Frequency Penalty": "Штраф за частоту",
 	"General": "Общее",
@@ -269,9 +279,11 @@
 	"Light": "Светлый",
 	"Listening...": "Слушаю...",
 	"LLMs can make mistakes. Verify important information.": "LLMs могут допускать ошибки. Проверяйте важную информацию.",
+	"Local Models": "",
 	"LTR": "LTR",
 	"Made by OpenWebUI Community": "Сделано сообществом OpenWebUI",
 	"Make sure to enclose them with": "Убедитесь, что они заключены в",
+	"Manage": "",
 	"Manage Models": "Управление моделями",
 	"Manage Ollama Models": "Управление моделями Ollama",
 	"Manage Pipelines": "Управление конвейерами",
@@ -483,6 +495,7 @@
 	"to": "в",
 	"To access the available model names for downloading,": "Чтобы получить доступ к доступным для загрузки именам моделей,",
 	"To access the GGUF models available for downloading,": "Чтобы получить доступ к моделям GGUF, доступным для загрузки,",
+	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "",
 	"to chat input.": "в чате.",
 	"Today": "Сегодня",
 	"Toggle settings": "Переключить настройки",
@@ -534,11 +547,13 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Напишите резюме в 50 словах, которое кратко описывает [тему или ключевое слово].",
 	"Yesterday": "Вчера",
 	"You": "Вы",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "Клонировать базовую модель невозможно",
 	"You have no archived conversations.": "У вас нет архивированных бесед.",
 	"You have shared this chat": "Вы поделились этим чатом",
 	"You're a helpful assistant.": "Вы полезный ассистент.",
 	"You're now logged in.": "Вы вошли в систему.",
+	"Your account status is currently pending activation.": "",
 	"Youtube": "Ютуб",
 	"Youtube Loader Settings": "Настройки загрузчика YouTube"
 }
