--- a/src/lib/i18n/locales/sr-RS/translation.json
+++ b/src/lib/i18n/locales/sr-RS/translation.json
@@ -12,6 +12,7 @@
 	"a user": "корисник",
 	"About": "О нама",
 	"Account": "Налог",
+	"Account Activation Pending": "",
 	"Accurate information": "Прецизне информације",
 	"Active Users": "",
 	"Add": "Додај",
@@ -22,6 +23,7 @@
 	"Add custom prompt": "Додај прилагођен упит",
 	"Add Docs": "Додај документе",
 	"Add Files": "Додај датотеке",
+	"Add memory": "",
 	"Add Memory": "Додај меморију",
 	"Add message": "Додај поруку",
 	"Add Model": "Додај модел",
@@ -88,8 +90,10 @@
 	"Chunk Params": "Параметри делова",
 	"Chunk Size": "Величина дела",
 	"Citation": "Цитат",
+	"Clear memory": "",
 	"Click here for help.": "Кликните овде за помоћ.",
 	"Click here to": "Кликните овде да",
+	"Click here to download user import template file.": "",
 	"Click here to select": "Кликните овде да изаберете",
 	"Click here to select a csv file.": "Кликните овде да изаберете csv датотеку.",
 	"Click here to select documents.": "Кликните овде да изаберете документе.",
@@ -105,6 +109,7 @@
 	"Concurrent Requests": "Упоредни захтеви",
 	"Confirm Password": "Потврди лозинку",
 	"Connections": "Везе",
+	"Contact Admin for WebUI Access": "",
 	"Content": "Садржај",
 	"Context Length": "Дужина контекста",
 	"Continue Response": "Настави одговор",
@@ -122,6 +127,7 @@
 	"Create new secret key": "Направи нови тајни кључ",
 	"Created at": "Направљено у",
 	"Created At": "Направљено у",
+	"CSV Import": "",
 	"Current Model": "Тренутни модел",
 	"Current Password": "Тренутна лозинка",
 	"Custom": "Прилагођено",
@@ -207,12 +213,15 @@
 	"Error": "Грешка",
 	"Experimental": "Експериментално",
 	"Export": "Извоз",
+	"Export All Archived Chats": "",
 	"Export All Chats (All Users)": "Извези сва ћаскања (сви корисници)",
 	"Export chat (.json)": "",
 	"Export Chats": "Извези ћаскања",
 	"Export Documents Mapping": "Извези мапирање докумената",
+	"Export LiteLLM config.yaml": "",
 	"Export Models": "Извези моделе",
 	"Export Prompts": "Извези упите",
+	"External Models": "",
 	"Failed to create API Key.": "Неуспешно стварање API кључа.",
 	"Failed to read clipboard contents": "Неуспешно читање садржаја оставе",
 	"Failed to update settings": "",
@@ -224,6 +233,7 @@
 	"Fluidly stream large external response chunks": "Течно стримујте велике спољне делове одговора",
 	"Focus chat input": "Усредсредите унос ћаскања",
 	"Followed instructions perfectly": "Упутства су савршено праћена",
+	"Form": "",
 	"Format your variables using square brackets like this:": "Форматирајте ваше променљиве користећи угластe заграде овако:",
 	"Frequency Penalty": "Фреквентна казна",
 	"General": "Опште",
@@ -269,9 +279,11 @@
 	"Light": "Светла",
 	"Listening...": "Слушам...",
 	"LLMs can make mistakes. Verify important information.": "ВЈМ-ови (LLM-ови) могу правити грешке. Проверите важне податке.",
+	"Local Models": "",
 	"LTR": "ЛНД",
 	"Made by OpenWebUI Community": "Израдила OpenWebUI заједница",
 	"Make sure to enclose them with": "Уверите се да их затворите са",
+	"Manage": "",
 	"Manage Models": "Управљај моделима",
 	"Manage Ollama Models": "Управљај Ollama моделима",
 	"Manage Pipelines": "Управљање цевоводима",
@@ -482,6 +494,7 @@
 	"to": "до",
 	"To access the available model names for downloading,": "Да бисте приступили доступним именима модела за преузимање,",
 	"To access the GGUF models available for downloading,": "Да бисте приступили GGUF моделима доступним за преузимање,",
+	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "",
 	"to chat input.": "у унос ћаскања.",
 	"Today": "Данас",
 	"Toggle settings": "Пребаци подешавања",
@@ -533,11 +546,13 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Напишите сажетак у 50 речи који резимира [тему или кључну реч].",
 	"Yesterday": "Јуче",
 	"You": "Ти",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "Не можеш клонирати основни модел",
 	"You have no archived conversations.": "Немате архивиране разговоре.",
 	"You have shared this chat": "Поделили сте ово ћаскање",
 	"You're a helpful assistant.": "Ти си користан помоћник.",
 	"You're now logged in.": "Сада сте пријављени.",
+	"Your account status is currently pending activation.": "",
 	"Youtube": "Јутјуб",
 	"Youtube Loader Settings": "Подешавања Јутјуб учитавача"
 }
