--- a/src/lib/i18n/locales/sv-SE/translation.json
+++ b/src/lib/i18n/locales/sv-SE/translation.json
@@ -12,6 +12,7 @@
 	"a user": "en användare",
 	"About": "Om",
 	"Account": "Konto",
+	"Account Activation Pending": "",
 	"Accurate information": "Exakt information",
 	"Active Users": "",
 	"Add": "Lägg till",
@@ -22,6 +23,7 @@
 	"Add custom prompt": "Lägg till en anpassad prompt",
 	"Add Docs": "Lägg till dokument",
 	"Add Files": "Lägg till filer",
+	"Add memory": "",
 	"Add Memory": "Lägg till minne",
 	"Add message": "Lägg till meddelande",
 	"Add Model": "Lägg till modell",
@@ -88,8 +90,10 @@
 	"Chunk Params": "Chunk-parametrar",
 	"Chunk Size": "Chunk-storlek",
 	"Citation": "Citat",
+	"Clear memory": "",
 	"Click here for help.": "Klicka här för hjälp.",
 	"Click here to": "Klicka här för att",
+	"Click here to download user import template file.": "",
 	"Click here to select": "Klicka här för att välja",
 	"Click here to select a csv file.": "Klicka här för att välja en csv-fil.",
 	"Click here to select documents.": "Klicka här för att välja dokument.",
@@ -105,6 +109,7 @@
 	"Concurrent Requests": "Samtidiga begäranden",
 	"Confirm Password": "Bekräfta lösenord",
 	"Connections": "Anslutningar",
+	"Contact Admin for WebUI Access": "",
 	"Content": "Innehåll",
 	"Context Length": "Kontextlängd",
 	"Continue Response": "Fortsätt svar",
@@ -122,6 +127,7 @@
 	"Create new secret key": "Skapa ny hemlig nyckel",
 	"Created at": "Skapad",
 	"Created At": "Skapad",
+	"CSV Import": "",
 	"Current Model": "Aktuell modell",
 	"Current Password": "Nuvarande lösenord",
 	"Custom": "Anpassad",
@@ -207,12 +213,15 @@
 	"Error": "Fel",
 	"Experimental": "Experimentell",
 	"Export": "Export",
+	"Export All Archived Chats": "",
 	"Export All Chats (All Users)": "Exportera alla chattar (alla användare)",
 	"Export chat (.json)": "",
 	"Export Chats": "Exportera chattar",
 	"Export Documents Mapping": "Exportera dokumentmappning",
+	"Export LiteLLM config.yaml": "",
 	"Export Models": "Exportera modeller",
 	"Export Prompts": "Exportera prompts",
+	"External Models": "",
 	"Failed to create API Key.": "Misslyckades med att skapa API-nyckel.",
 	"Failed to read clipboard contents": "Misslyckades med att läsa urklippsinnehåll",
 	"Failed to update settings": "",
@@ -224,6 +233,7 @@
 	"Fluidly stream large external response chunks": "Flytande ström stora externa svarsblock",
 	"Focus chat input": "Fokusera chattindata",
 	"Followed instructions perfectly": "Följde instruktionerna perfekt",
+	"Form": "",
 	"Format your variables using square brackets like this:": "Formatera dina variabler med hakparenteser så här:",
 	"Frequency Penalty": "Straff för frekvens",
 	"General": "Allmän",
@@ -269,9 +279,11 @@
 	"Light": "Ljus",
 	"Listening...": "Lyssnar...",
 	"LLMs can make mistakes. Verify important information.": "LLM:er kan göra misstag. Verifiera viktig information.",
+	"Local Models": "",
 	"LTR": "LTR",
 	"Made by OpenWebUI Community": "Skapad av OpenWebUI Community",
 	"Make sure to enclose them with": "Se till att bifoga dem med",
+	"Manage": "",
 	"Manage Models": "Hantera modeller",
 	"Manage Ollama Models": "Hantera Ollama-modeller",
 	"Manage Pipelines": "Hantera pipelines",
@@ -481,6 +493,7 @@
 	"to": "till",
 	"To access the available model names for downloading,": "För att komma åt de tillgängliga modellnamnen för nedladdning,",
 	"To access the GGUF models available for downloading,": "För att komma åt de GGUF-modeller som finns tillgängliga för nedladdning,",
+	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "",
 	"to chat input.": "till chattinmatning.",
 	"Today": "Idag",
 	"Toggle settings": "Växla inställningar",
@@ -532,11 +545,13 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Skriv en sammanfattning på 50 ord som sammanfattar [ämne eller nyckelord].",
 	"Yesterday": "Igenom",
 	"You": "du",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "Du kan inte klona en basmodell",
 	"You have no archived conversations.": "Du har inga arkiverade konversationer.",
 	"You have shared this chat": "Du har delat denna chatt",
 	"You're a helpful assistant.": "Du är en hjälpsam assistent.",
 	"You're now logged in.": "Du är nu inloggad.",
+	"Your account status is currently pending activation.": "",
 	"Youtube": "Youtube",
 	"Youtube Loader Settings": "Youtube Loader-inställningar"
 }
