--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -12,6 +12,7 @@
 	"a user": "bir kullanıcı",
 	"About": "Hakkında",
 	"Account": "Hesap",
+	"Account Activation Pending": "",
 	"Accurate information": "Doğru bilgi",
 	"Active Users": "",
 	"Add": "Ekle",
@@ -22,6 +23,7 @@
 	"Add custom prompt": "Özel prompt ekle",
 	"Add Docs": "Dökümanlar Ekle",
 	"Add Files": "Dosyalar Ekle",
+	"Add memory": "",
 	"Add Memory": "Bellek Ekle",
 	"Add message": "Mesaj ekle",
 	"Add Model": "Model Ekle",
@@ -88,8 +90,10 @@
 	"Chunk Params": "Chunk Parametreleri",
 	"Chunk Size": "Chunk Boyutu",
 	"Citation": "Alıntı",
+	"Clear memory": "",
 	"Click here for help.": "Yardım için buraya tıklayın.",
 	"Click here to": "Şunu yapmak için buraya tıklayın:",
+	"Click here to download user import template file.": "",
 	"Click here to select": "Seçmek için buraya tıklayın",
 	"Click here to select a csv file.": "Bir CSV dosyası seçmek için buraya tıklayın.",
 	"Click here to select documents.": "Belgeleri seçmek için buraya tıklayın.",
@@ -105,6 +109,7 @@
 	"Concurrent Requests": "Eşzamanlı İstekler",
 	"Confirm Password": "Parolayı Onayla",
 	"Connections": "Bağlantılar",
+	"Contact Admin for WebUI Access": "",
 	"Content": "İçerik",
 	"Context Length": "Bağlam Uzunluğu",
 	"Continue Response": "Yanıta Devam Et",
@@ -122,6 +127,7 @@
 	"Create new secret key": "Yeni gizli anahtar oluştur",
 	"Created at": "Oluşturulma tarihi",
 	"Created At": "Şu Tarihte Oluşturuldu:",
+	"CSV Import": "",
 	"Current Model": "Mevcut Model",
 	"Current Password": "Mevcut Parola",
 	"Custom": "Özel",
@@ -207,12 +213,15 @@
 	"Error": "Hata",
 	"Experimental": "Deneysel",
 	"Export": "Dışa Aktar",
+	"Export All Archived Chats": "",
 	"Export All Chats (All Users)": "Tüm Sohbetleri Dışa Aktar (Tüm Kullanıcılar)",
 	"Export chat (.json)": "Sohbeti dışa aktar (.json)",
 	"Export Chats": "Sohbetleri Dışa Aktar",
 	"Export Documents Mapping": "Belge Eşlemesini Dışa Aktar",
+	"Export LiteLLM config.yaml": "",
 	"Export Models": "Modelleri Dışa Aktar",
 	"Export Prompts": "Promptları Dışa Aktar",
+	"External Models": "",
 	"Failed to create API Key.": "API Anahtarı oluşturulamadı.",
 	"Failed to read clipboard contents": "Pano içeriği okunamadı",
 	"Failed to update settings": "",
@@ -224,6 +233,7 @@
 	"Fluidly stream large external response chunks": "Büyük harici yanıt chunklarını akıcı bir şekilde yayınlayın",
 	"Focus chat input": "Sohbet girişine odaklan",
 	"Followed instructions perfectly": "Talimatları mükemmel şekilde takip etti",
+	"Form": "",
 	"Format your variables using square brackets like this:": "Değişkenlerinizi şu şekilde kare parantezlerle biçimlendirin:",
 	"Frequency Penalty": "Frekans Cezası",
 	"General": "Genel",
@@ -269,9 +279,11 @@
 	"Light": "Açık",
 	"Listening...": "Dinleniyor...",
 	"LLMs can make mistakes. Verify important information.": "LLM'ler hata yapabilir. Önemli bilgileri doğrulayın.",
+	"Local Models": "",
 	"LTR": "LTR",
 	"Made by OpenWebUI Community": "OpenWebUI Topluluğu tarafından yapılmıştır",
 	"Make sure to enclose them with": "Değişkenlerinizi şu şekilde biçimlendirin:",
+	"Manage": "",
 	"Manage Models": "Modelleri Yönet",
 	"Manage Ollama Models": "Ollama Modellerini Yönet",
 	"Manage Pipelines": "Pipeline'ları Yönet",
@@ -481,6 +493,7 @@
 	"to": "için",
 	"To access the available model names for downloading,": "İndirilebilir mevcut model adlarına erişmek için,",
 	"To access the GGUF models available for downloading,": "İndirilebilir mevcut GGUF modellerine erişmek için,",
+	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "",
 	"to chat input.": "sohbet girişine.",
 	"Today": "Bugün",
 	"Toggle settings": "Ayarları Aç/Kapat",
@@ -532,11 +545,13 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "[Konuyu veya anahtar kelimeyi] özetleyen 50 kelimelik bir özet yazın.",
 	"Yesterday": "Dün",
 	"You": "Sen",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "Bir temel modeli klonlayamazsınız",
 	"You have no archived conversations.": "Arşivlenmiş sohbetleriniz yok.",
 	"You have shared this chat": "Bu sohbeti paylaştınız",
 	"You're a helpful assistant.": "Sen yardımcı bir asistansın.",
 	"You're now logged in.": "Şimdi giriş yaptınız.",
+	"Your account status is currently pending activation.": "",
 	"Youtube": "Youtube",
 	"Youtube Loader Settings": "Youtube Yükleyici Ayarları"
 }
