--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -12,6 +12,7 @@
 	"a user": "người sử dụng",
 	"About": "Giới thiệu",
 	"Account": "Tài khoản",
+	"Account Activation Pending": "",
 	"Accurate information": "Thông tin chính xác",
 	"Active Users": "",
 	"Add": "Thêm",
@@ -22,6 +23,7 @@
 	"Add custom prompt": "Thêm prompt tùy chỉnh",
 	"Add Docs": "Thêm tài liệu",
 	"Add Files": "Thêm tệp",
+	"Add memory": "",
 	"Add Memory": "Thêm bộ nhớ",
 	"Add message": "Thêm tin nhắn",
 	"Add Model": "Thêm model",
@@ -88,8 +90,10 @@
 	"Chunk Params": "Tham số khối (chunk)",
 	"Chunk Size": "Kích thước khối (size)",
 	"Citation": "Trích dẫn",
+	"Clear memory": "",
 	"Click here for help.": "Bấm vào đây để được trợ giúp.",
 	"Click here to": "Nhấn vào đây để",
+	"Click here to download user import template file.": "",
 	"Click here to select": "Bấm vào đây để chọn",
 	"Click here to select a csv file.": "Nhấn vào đây để chọn tệp csv",
 	"Click here to select documents.": "Bấm vào đây để chọn tài liệu.",
@@ -105,6 +109,7 @@
 	"Concurrent Requests": "Các truy vấn đồng thời",
 	"Confirm Password": "Xác nhận Mật khẩu",
 	"Connections": "Kết nối",
+	"Contact Admin for WebUI Access": "",
 	"Content": "Nội dung",
 	"Context Length": "Độ dài ngữ cảnh (Context Length)",
 	"Continue Response": "Tiếp tục trả lời",
@@ -122,6 +127,7 @@
 	"Create new secret key": "Tạo key bí mật mới",
 	"Created at": "Được tạo vào lúc",
 	"Created At": "Tạo lúc",
+	"CSV Import": "",
 	"Current Model": "Mô hình hiện tại",
 	"Current Password": "Mật khẩu hiện tại",
 	"Custom": "Tùy chỉnh",
@@ -207,12 +213,15 @@
 	"Error": "Lỗi",
 	"Experimental": "Thử nghiệm",
 	"Export": "Xuất khẩu",
+	"Export All Archived Chats": "",
 	"Export All Chats (All Users)": "Tải về tất cả nội dung chat (tất cả mọi người)",
 	"Export chat (.json)": "",
 	"Export Chats": "Tải nội dung chat về máy",
 	"Export Documents Mapping": "Tải cấu trúc tài liệu về máy",
+	"Export LiteLLM config.yaml": "",
 	"Export Models": "Tải Models về máy",
 	"Export Prompts": "Tải các prompt về máy",
+	"External Models": "",
 	"Failed to create API Key.": "Lỗi khởi tạo API Key",
 	"Failed to read clipboard contents": "Không thể đọc nội dung clipboard",
 	"Failed to update settings": "",
@@ -224,6 +233,7 @@
 	"Fluidly stream large external response chunks": "Truyền tải các khối phản hồi bên ngoài lớn một cách trôi chảy",
 	"Focus chat input": "Tập trung vào nội dung chat",
 	"Followed instructions perfectly": "Tuân theo chỉ dẫn một cách hoàn hảo",
+	"Form": "",
 	"Format your variables using square brackets like this:": "Định dạng các biến của bạn bằng cách sử dụng dấu ngoặc vuông như thế này:",
 	"Frequency Penalty": "Hình phạt tần số",
 	"General": "Cài đặt chung",
@@ -269,9 +279,11 @@
 	"Light": "Sáng",
 	"Listening...": "Đang nghe...",
 	"LLMs can make mistakes. Verify important information.": "Hệ thống có thể tạo ra nội dung không chính xác hoặc sai. Hãy kiểm chứng kỹ lưỡng thông tin trước khi tiếp nhận và sử dụng.",
+	"Local Models": "",
 	"LTR": "LTR",
 	"Made by OpenWebUI Community": "Được tạo bởi Cộng đồng OpenWebUI",
 	"Make sure to enclose them with": "Hãy chắc chắn bao quanh chúng bằng",
+	"Manage": "",
 	"Manage Models": "Quản lý mô hình",
 	"Manage Ollama Models": "Quản lý mô hình với Ollama",
 	"Manage Pipelines": "Quản lý Pipelines",
@@ -480,6 +492,7 @@
 	"to": " - ",
 	"To access the available model names for downloading,": "Để truy cập các tên mô hình có sẵn để tải xuống,",
 	"To access the GGUF models available for downloading,": "Để truy cập các mô hình GGUF có sẵn để tải xuống,",
+	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "",
 	"to chat input.": "đến đầu vào trò chuyện.",
 	"Today": "Hôm nay",
 	"Toggle settings": "Bật/tắt cài đặt",
@@ -531,11 +544,13 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Viết một tóm tắt trong vòng 50 từ cho [chủ đề hoặc từ khóa].",
 	"Yesterday": "Hôm qua",
 	"You": "Bạn",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "Bạn không thể nhân bản base model",
 	"You have no archived conversations.": "Bạn chưa lưu trữ một nội dung chat nào",
 	"You have shared this chat": "Bạn vừa chia sẻ chat này",
 	"You're a helpful assistant.": "Bạn là một trợ lý hữu ích.",
 	"You're now logged in.": "Bạn đã đăng nhập.",
+	"Your account status is currently pending activation.": "",
 	"Youtube": "Youtube",
 	"Youtube Loader Settings": "Cài đặt Youtube Loader"
 }
