--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -12,6 +12,7 @@
 	"a user": "用户",
 	"About": "关于",
 	"Account": "账号",
+	"Account Activation Pending": "",
 	"Accurate information": "提供的信息很准确",
 	"Active Users": "当前在线用户",
 	"Add": "添加",
@@ -22,6 +23,7 @@
 	"Add custom prompt": "添加自定义提示词",
 	"Add Docs": "添加文档",
 	"Add Files": "添加文件",
+	"Add memory": "",
 	"Add Memory": "添加记忆",
 	"Add message": "添加消息",
 	"Add Model": "添加模型",
@@ -88,8 +90,10 @@
 	"Chunk Params": "块参数 (Chunk Params)",
 	"Chunk Size": "块大小 (Chunk Size)",
 	"Citation": "引文",
+	"Clear memory": "",
 	"Click here for help.": "点击这里获取帮助。",
 	"Click here to": "单击",
+	"Click here to download user import template file.": "",
 	"Click here to select": "点击这里选择",
 	"Click here to select a csv file.": "单击此处选择 csv 文件。",
 	"Click here to select documents.": "单击选择文档",
@@ -105,6 +109,7 @@
 	"Concurrent Requests": "并发请求",
 	"Confirm Password": "确认密码",
 	"Connections": "外部连接",
+	"Contact Admin for WebUI Access": "",
 	"Content": "内容",
 	"Context Length": "上下文长度",
 	"Continue Response": "继续生成",
@@ -122,6 +127,7 @@
 	"Create new secret key": "创建新安全密钥",
 	"Created at": "创建于",
 	"Created At": "创建于",
+	"CSV Import": "",
 	"Current Model": "当前模型",
 	"Current Password": "当前密码",
 	"Custom": "自定义",
@@ -207,12 +213,15 @@
 	"Error": "错误",
 	"Experimental": "实验性",
 	"Export": "导出",
+	"Export All Archived Chats": "",
 	"Export All Chats (All Users)": "导出所有用户对话",
 	"Export chat (.json)": "JSON 文件 (.json)",
 	"Export Chats": "导出对话",
 	"Export Documents Mapping": "导出文档映射",
+	"Export LiteLLM config.yaml": "",
 	"Export Models": "导出模型",
 	"Export Prompts": "导出提示词",
+	"External Models": "",
 	"Failed to create API Key.": "无法创建 API 密钥。",
 	"Failed to read clipboard contents": "无法读取剪贴板内容",
 	"Failed to update settings": "无法更新设置",
@@ -224,6 +233,7 @@
 	"Fluidly stream large external response chunks": "流畅地传输外部大型响应块数据",
 	"Focus chat input": "聚焦对话输入",
 	"Followed instructions perfectly": "完全按照指示执行",
+	"Form": "",
 	"Format your variables using square brackets like this:": "使用这样的方括号格式化你的变量：",
 	"Frequency Penalty": "频率惩罚",
 	"General": "通用",
@@ -269,9 +279,11 @@
 	"Light": "浅色",
 	"Listening...": "正在倾听...",
 	"LLMs can make mistakes. Verify important information.": "大语言模型可能会生成误导性错误信息，请对关键信息加以验证。",
+	"Local Models": "",
 	"LTR": "从左至右",
 	"Made by OpenWebUI Community": "由 OpenWebUI 社区制作",
 	"Make sure to enclose them with": "确保将它们包含在内",
+	"Manage": "",
 	"Manage Models": "管理模型",
 	"Manage Ollama Models": "管理 Ollama 模型",
 	"Manage Pipelines": "管理 Pipeline",
@@ -480,6 +492,7 @@
 	"to": "到",
 	"To access the available model names for downloading,": "要访问可下载的模型名称，",
 	"To access the GGUF models available for downloading,": "要访问可下载的 GGUF 模型，",
+	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "",
 	"to chat input.": "到对话输入。",
 	"Today": "今天",
 	"Toggle settings": "切换设置",
@@ -531,11 +544,13 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "用 50 个字写一个总结 [主题或关键词]。",
 	"Yesterday": "昨天",
 	"You": "你",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "你不能复制基础模型",
 	"You have no archived conversations.": "你没有已归档的对话。",
 	"You have shared this chat": "你之前已经分享过此",
 	"You're a helpful assistant.": "你是一个有帮助的助手。",
 	"You're now logged in.": "已登录。",
+	"Your account status is currently pending activation.": "",
 	"Youtube": "YouTube",
 	"Youtube Loader Settings": "YouTube 爬取设置"
 }
