--- a/src/lib/i18n/locales/zh-TW/translation.json
+++ b/src/lib/i18n/locales/zh-TW/translation.json
@@ -12,6 +12,7 @@
 	"a user": "使用者",
 	"About": "關於",
 	"Account": "帳號",
+	"Account Activation Pending": "",
 	"Accurate information": "準確信息",
 	"Active Users": "",
 	"Add": "新增",
@@ -22,6 +23,7 @@
 	"Add custom prompt": "新增自定義提示詞",
 	"Add Docs": "新增文件",
 	"Add Files": "新增檔案",
+	"Add memory": "",
 	"Add Memory": "新增記憶",
 	"Add message": "新增訊息",
 	"Add Model": "新增模型",
@@ -88,8 +90,10 @@
 	"Chunk Params": "Chunk 參數",
 	"Chunk Size": "Chunk 大小",
 	"Citation": "引文",
+	"Clear memory": "",
 	"Click here for help.": "點擊這裡尋找幫助。",
 	"Click here to": "點擊這裡",
+	"Click here to download user import template file.": "",
 	"Click here to select": "點擊這裡選擇",
 	"Click here to select a csv file.": "點擊這裡選擇 csv 檔案。",
 	"Click here to select documents.": "點擊這裡選擇文件。",
@@ -105,6 +109,7 @@
 	"Concurrent Requests": "同時請求",
 	"Confirm Password": "確認密碼",
 	"Connections": "連線",
+	"Contact Admin for WebUI Access": "",
 	"Content": "內容",
 	"Context Length": "上下文長度",
 	"Continue Response": "繼續回答",
@@ -122,6 +127,7 @@
 	"Create new secret key": "建立新密鑰",
 	"Created at": "建立於",
 	"Created At": "建立於",
+	"CSV Import": "",
 	"Current Model": "目前模型",
 	"Current Password": "目前密碼",
 	"Custom": "自訂",
@@ -207,12 +213,15 @@
 	"Error": "錯誤",
 	"Experimental": "實驗功能",
 	"Export": "出口",
+	"Export All Archived Chats": "",
 	"Export All Chats (All Users)": "匯出所有聊天紀錄（所有使用者）",
 	"Export chat (.json)": "",
 	"Export Chats": "匯出聊天紀錄",
 	"Export Documents Mapping": "匯出文件映射",
+	"Export LiteLLM config.yaml": "",
 	"Export Models": "匯出模型",
 	"Export Prompts": "匯出提示詞",
+	"External Models": "",
 	"Failed to create API Key.": "無法創建 API 金鑰。",
 	"Failed to read clipboard contents": "無法讀取剪貼簿內容",
 	"Failed to update settings": "",
@@ -224,6 +233,7 @@
 	"Fluidly stream large external response chunks": "流暢地傳輸大型外部響應區塊",
 	"Focus chat input": "聚焦聊天輸入框",
 	"Followed instructions perfectly": "完全遵循指示",
+	"Form": "",
 	"Format your variables using square brackets like this:": "像這樣使用方括號來格式化你的變數：",
 	"Frequency Penalty": "頻率懲罰",
 	"General": "常用",
@@ -269,9 +279,11 @@
 	"Light": "亮色",
 	"Listening...": "正在聽取...",
 	"LLMs can make mistakes. Verify important information.": "LLM 可能會產生錯誤。請驗證重要資訊。",
+	"Local Models": "",
 	"LTR": "LTR",
 	"Made by OpenWebUI Community": "由 OpenWebUI 社區製作",
 	"Make sure to enclose them with": "請確保變數有被以下符號框住：",
+	"Manage": "",
 	"Manage Models": "管理模組",
 	"Manage Ollama Models": "管理 Ollama 模型",
 	"Manage Pipelines": "管理管道",
@@ -480,6 +492,7 @@
 	"to": "到",
 	"To access the available model names for downloading,": "若想查看可供下載的模型名稱，",
 	"To access the GGUF models available for downloading,": "若想查看可供下載的 GGUF 模型名稱，",
+	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "",
 	"to chat input.": "到聊天輸入框來啟動此命令。",
 	"Today": "今天",
 	"Toggle settings": "切換設定",
@@ -531,11 +544,13 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "寫一個 50 字的摘要來概括 [主題或關鍵詞]。",
 	"Yesterday": "昨天",
 	"You": "你",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "你不能複製基礎模型",
 	"You have no archived conversations.": "你沒有任何已封存的對話",
 	"You have shared this chat": "你已分享此聊天",
 	"You're a helpful assistant.": "你是一位善於協助他人的助手。",
 	"You're now logged in.": "已登入。",
+	"Your account status is currently pending activation.": "",
 	"Youtube": "Youtube",
 	"Youtube Loader Settings": "Youtube 載入器設定"
 }
