--- a/src/lib/i18n/locales/fa-IR/translation.json
+++ b/src/lib/i18n/locales/fa-IR/translation.json
@@ -12,6 +12,7 @@
 	"a user": "یک کاربر",
 	"About": "درباره",
 	"Account": "حساب کاربری",
+	"Account Activation Pending": "",
 	"Accurate information": "اطلاعات دقیق",
 	"Active Users": "",
 	"Add": "اضافه کردن",
@@ -22,6 +23,7 @@
 	"Add custom prompt": "اضافه کردن یک درخواست سفارشی",
 	"Add Docs": "اضافه کردن اسناد",
 	"Add Files": "اضافه کردن فایل\u200cها",
+	"Add memory": "",
 	"Add Memory": "اضافه کردن یادگیری",
 	"Add message": "اضافه کردن پیغام",
 	"Add Model": "اضافه کردن مدل",
@@ -88,8 +90,10 @@
 	"Chunk Params": "پارامترهای تکه",
 	"Chunk Size": "اندازه تکه",
 	"Citation": "استناد",
+	"Clear memory": "",
 	"Click here for help.": "برای کمک اینجا را کلیک کنید.",
 	"Click here to": "برای کمک اینجا را کلیک کنید.",
+	"Click here to download user import template file.": "",
 	"Click here to select": "برای انتخاب اینجا کلیک کنید",
 	"Click here to select a csv file.": "برای انتخاب یک فایل csv اینجا را کلیک کنید.",
 	"Click here to select documents.": "برای انتخاب اسناد اینجا را کلیک کنید.",
@@ -105,6 +109,7 @@
 	"Concurrent Requests": "درخواست های همزمان",
 	"Confirm Password": "تایید رمز عبور",
 	"Connections": "ارتباطات",
+	"Contact Admin for WebUI Access": "",
 	"Content": "محتوا",
 	"Context Length": "طول زمینه",
 	"Continue Response": "ادامه پاسخ",
@@ -122,6 +127,7 @@
 	"Create new secret key": "ساخت کلید gehez جدید",
 	"Created at": "ایجاد شده در",
 	"Created At": "ایجاد شده در",
+	"CSV Import": "",
 	"Current Model": "مدل فعلی",
 	"Current Password": "رمز عبور فعلی",
 	"Custom": "دلخواه",
@@ -207,12 +213,15 @@
 	"Error": "خطا",
 	"Experimental": "آزمایشی",
 	"Export": "صادرات",
+	"Export All Archived Chats": "",
 	"Export All Chats (All Users)": "اکسپورت از همه گپ\u200cها(همه کاربران)",
 	"Export chat (.json)": "",
 	"Export Chats": "اکسپورت از گپ\u200cها",
 	"Export Documents Mapping": "اکسپورت از نگاشت اسناد",
+	"Export LiteLLM config.yaml": "",
 	"Export Models": "مدل های صادرات",
 	"Export Prompts": "اکسپورت از پرامپت\u200cها",
+	"External Models": "",
 	"Failed to create API Key.": "ایجاد کلید API با خطا مواجه شد.",
 	"Failed to read clipboard contents": "خواندن محتوای کلیپ بورد ناموفق بود",
 	"Failed to update settings": "",
@@ -224,6 +233,7 @@
 	"Fluidly stream large external response chunks": "تکه های پاسخ خارجی بزرگ را به صورت سیال پخش کنید",
 	"Focus chat input": "فوکوس کردن ورودی گپ",
 	"Followed instructions perfectly": "دستورالعمل ها را کاملا دنبال کرد",
+	"Form": "",
 	"Format your variables using square brackets like this:": "متغیرهای خود را با استفاده از براکت مربع به شکل زیر قالب بندی کنید:",
 	"Frequency Penalty": "مجازات فرکانس",
 	"General": "عمومی",
@@ -269,9 +279,11 @@
 	"Light": "روشن",
 	"Listening...": "در حال گوش دادن...",
 	"LLMs can make mistakes. Verify important information.": "مدل\u200cهای زبانی بزرگ می\u200cتوانند اشتباه کنند. اطلاعات مهم را راستی\u200cآزمایی کنید.",
+	"Local Models": "",
 	"LTR": "LTR",
 	"Made by OpenWebUI Community": "ساخته شده توسط OpenWebUI Community",
 	"Make sure to enclose them with": "مطمئن شوید که آنها را با این محصور کنید:",
+	"Manage": "",
 	"Manage Models": "مدیریت مدل\u200cها",
 	"Manage Ollama Models": "مدیریت مدل\u200cهای اولاما",
 	"Manage Pipelines": "مدیریت خطوط لوله",
@@ -481,6 +493,7 @@
 	"to": "به",
 	"To access the available model names for downloading,": "برای دسترسی به نام مدل های موجود برای دانلود،",
 	"To access the GGUF models available for downloading,": "برای دسترسی به مدل\u200cهای GGUF موجود برای دانلود،",
+	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "",
 	"to chat input.": "در ورودی گپ.",
 	"Today": "امروز",
 	"Toggle settings": "نمایش/عدم نمایش تنظیمات",
@@ -532,11 +545,13 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "خلاصه ای در 50 کلمه بنویسید که [موضوع یا کلمه کلیدی] را خلاصه کند.",
 	"Yesterday": "دیروز",
 	"You": "شما",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "شما نمیتوانید یک مدل پایه را کلون کنید",
 	"You have no archived conversations.": "شما هیچ گفتگوی ذخیره شده ندارید.",
 	"You have shared this chat": "شما این گفتگو را به اشتراک گذاشته اید",
 	"You're a helpful assistant.": "تو یک دستیار سودمند هستی.",
 	"You're now logged in.": "شما اکنون وارد شده\u200cاید.",
+	"Your account status is currently pending activation.": "",
 	"Youtube": "یوتیوب",
 	"Youtube Loader Settings": "تنظیمات لودر یوتیوب"
 }
