--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -12,6 +12,7 @@
 	"a user": "un utilisateur",
 	"About": "À Propos",
 	"Account": "Compte",
+	"Account Activation Pending": "",
 	"Accurate information": "Information précise",
 	"Active Users": "",
 	"Add": "Ajouter",
@@ -22,6 +23,7 @@
 	"Add custom prompt": "Ajouter un prompt personnalisé",
 	"Add Docs": "Ajouter des Documents",
 	"Add Files": "Ajouter des Fichiers",
+	"Add memory": "",
 	"Add Memory": "Ajouter de la Mémoire",
 	"Add message": "Ajouter un message",
 	"Add Model": "Ajouter un Modèle",
@@ -88,8 +90,10 @@
 	"Chunk Params": "Paramètres de bloc",
 	"Chunk Size": "Taille de bloc",
 	"Citation": "Citation",
+	"Clear memory": "",
 	"Click here for help.": "Cliquez ici pour de l'aide.",
 	"Click here to": "Cliquez ici pour",
+	"Click here to download user import template file.": "",
 	"Click here to select": "Cliquez ici pour sélectionner",
 	"Click here to select a csv file.": "Cliquez ici pour sélectionner un fichier csv.",
 	"Click here to select documents.": "Cliquez ici pour sélectionner des documents.",
@@ -105,6 +109,7 @@
 	"Concurrent Requests": "Demandes simultanées",
 	"Confirm Password": "Confirmer le mot de passe",
 	"Connections": "Connexions",
+	"Contact Admin for WebUI Access": "",
 	"Content": "Contenu",
 	"Context Length": "Longueur du contexte",
 	"Continue Response": "Continuer la Réponse",
@@ -122,6 +127,7 @@
 	"Create new secret key": "Créer une nouvelle clé secrète",
 	"Created at": "Créé le",
 	"Created At": "Crée Le",
+	"CSV Import": "",
 	"Current Model": "Modèle actuel",
 	"Current Password": "Mot de passe actuel",
 	"Custom": "Personnalisé",
@@ -207,12 +213,15 @@
 	"Error": "Erreur",
 	"Experimental": "Expérimental",
 	"Export": "Exportation",
+	"Export All Archived Chats": "",
 	"Export All Chats (All Users)": "Exporter Tous les Chats (Tous les Utilisateurs)",
 	"Export chat (.json)": "",
 	"Export Chats": "Exporter les Chats",
 	"Export Documents Mapping": "Exporter la Correspondance des Documents",
+	"Export LiteLLM config.yaml": "",
 	"Export Models": "Exporter les Modèles",
 	"Export Prompts": "Exporter les Prompts",
+	"External Models": "",
 	"Failed to create API Key.": "Échec de la création de la clé d'API.",
 	"Failed to read clipboard contents": "Échec de la lecture du contenu du presse-papiers",
 	"Failed to update settings": "",
@@ -224,6 +233,7 @@
 	"Fluidly stream large external response chunks": "Diffusez de manière fluide de gros morceaux de réponses externes",
 	"Focus chat input": "Concentrer sur l'entrée du chat",
 	"Followed instructions perfectly": "A suivi les instructions parfaitement",
+	"Form": "",
 	"Format your variables using square brackets like this:": "Formatez vos variables en utilisant des crochets comme ceci :",
 	"Frequency Penalty": "Pénalité de fréquence",
 	"General": "Général",
@@ -269,9 +279,11 @@
 	"Light": "Clair",
 	"Listening...": "Écoute...",
 	"LLMs can make mistakes. Verify important information.": "Les LLMs peuvent faire des erreurs. Vérifiez les informations importantes.",
+	"Local Models": "",
 	"LTR": "LTR",
 	"Made by OpenWebUI Community": "Réalisé par la communauté OpenWebUI",
 	"Make sure to enclose them with": "Assurez-vous de les entourer avec",
+	"Manage": "",
 	"Manage Models": "Gérer les modèles",
 	"Manage Ollama Models": "Gérer les modèles Ollama",
 	"Manage Pipelines": "Gérer les pipelines",
@@ -482,6 +494,7 @@
 	"to": "à",
 	"To access the available model names for downloading,": "Pour accéder aux noms de modèles disponibles pour le téléchargement,",
 	"To access the GGUF models available for downloading,": "Pour accéder aux modèles GGUF disponibles pour le téléchargement,",
+	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "",
 	"to chat input.": "à l'entrée du chat.",
 	"Today": "Aujourd'hui",
 	"Toggle settings": "Basculer les paramètres",
@@ -533,11 +546,13 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Ecrivez un résumé en 50 mots qui résume [sujet ou mot-clé]",
 	"Yesterday": "Hier",
 	"You": "Vous",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "Vous ne pouvez pas cloner un modèle de base",
 	"You have no archived conversations.": "Vous n'avez pas de conversations archivées",
 	"You have shared this chat": "Vous avez partagé ce chat",
 	"You're a helpful assistant.": "Vous êtes un assistant utile.",
 	"You're now logged in.": "Vous êtes maintenant connecté.",
+	"Your account status is currently pending activation.": "",
 	"Youtube": "Youtube",
 	"Youtube Loader Settings": "Paramètres du Chargeur YouTube"
 }
