--- a/src/lib/i18n/locales/he-IL/translation.json
+++ b/src/lib/i18n/locales/he-IL/translation.json
@@ -12,6 +12,7 @@
 	"a user": "משתמש",
 	"About": "אודות",
 	"Account": "חשבון",
+	"Account Activation Pending": "",
 	"Accurate information": "מידע מדויק",
 	"Active Users": "",
 	"Add": "הוסף",
@@ -22,6 +23,7 @@
 	"Add custom prompt": "הוסף פקודה מותאמת אישית",
 	"Add Docs": "הוסף מסמכים",
 	"Add Files": "הוסף קבצים",
+	"Add memory": "",
 	"Add Memory": "הוסף זיכרון",
 	"Add message": "הוסף הודעה",
 	"Add Model": "הוסף מודל",
@@ -88,8 +90,10 @@
 	"Chunk Params": "פרמטרי נתונים",
 	"Chunk Size": "גודל נתונים",
 	"Citation": "ציטוט",
+	"Clear memory": "",
 	"Click here for help.": "לחץ כאן לעזרה.",
 	"Click here to": "לחץ כאן כדי",
+	"Click here to download user import template file.": "",
 	"Click here to select": "לחץ כאן לבחירה",
 	"Click here to select a csv file.": "לחץ כאן לבחירת קובץ csv.",
 	"Click here to select documents.": "לחץ כאן לבחירת מסמכים.",
@@ -105,6 +109,7 @@
 	"Concurrent Requests": "בקשות בו-זמניות",
 	"Confirm Password": "אשר סיסמה",
 	"Connections": "חיבורים",
+	"Contact Admin for WebUI Access": "",
 	"Content": "תוכן",
 	"Context Length": "אורך הקשר",
 	"Continue Response": "המשך תגובה",
@@ -122,6 +127,7 @@
 	"Create new secret key": "צור מפתח סודי חדש",
 	"Created at": "נוצר ב",
 	"Created At": "נוצר ב",
+	"CSV Import": "",
 	"Current Model": "המודל הנוכחי",
 	"Current Password": "הסיסמה הנוכחית",
 	"Custom": "מותאם אישית",
@@ -207,12 +213,15 @@
 	"Error": "שגיאה",
 	"Experimental": "ניסיוני",
 	"Export": "ייצא",
+	"Export All Archived Chats": "",
 	"Export All Chats (All Users)": "ייצוא כל הצ'אטים (כל המשתמשים)",
 	"Export chat (.json)": "",
 	"Export Chats": "ייצוא צ'אטים",
 	"Export Documents Mapping": "ייצוא מיפוי מסמכים",
+	"Export LiteLLM config.yaml": "",
 	"Export Models": "ייצוא מודלים",
 	"Export Prompts": "ייצוא פקודות",
+	"External Models": "",
 	"Failed to create API Key.": "יצירת מפתח API נכשלה.",
 	"Failed to read clipboard contents": "קריאת תוכן הלוח נכשלה",
 	"Failed to update settings": "",
@@ -224,6 +233,7 @@
 	"Fluidly stream large external response chunks": "שידור נתונים חיצוניים בקצב רציף",
 	"Focus chat input": "מיקוד הקלט לצ'אט",
 	"Followed instructions perfectly": "עקב אחר ההוראות במושלמות",
+	"Form": "",
 	"Format your variables using square brackets like this:": "עצב את המשתנים שלך באמצעות סוגריים מרובעים כך:",
 	"Frequency Penalty": "עונש תדירות",
 	"General": "כללי",
@@ -269,9 +279,11 @@
 	"Light": "בהיר",
 	"Listening...": "מאזין...",
 	"LLMs can make mistakes. Verify important information.": "מודלים בשפה טבעית יכולים לטעות. אמת מידע חשוב.",
+	"Local Models": "",
 	"LTR": "LTR",
 	"Made by OpenWebUI Community": "נוצר על ידי קהילת OpenWebUI",
 	"Make sure to enclose them with": "ודא להקיף אותם עם",
+	"Manage": "",
 	"Manage Models": "נהל מודלים",
 	"Manage Ollama Models": "נהל מודלים של Ollama",
 	"Manage Pipelines": "ניהול צינורות",
@@ -482,6 +494,7 @@
 	"to": "ל",
 	"To access the available model names for downloading,": "כדי לגשת לשמות הדגמים הזמינים להורדה,",
 	"To access the GGUF models available for downloading,": "כדי לגשת לדגמי GGUF הזמינים להורדה,",
+	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "",
 	"to chat input.": "לקלטת שיחה.",
 	"Today": "היום",
 	"Toggle settings": "החלפת מצב של הגדרות",
@@ -533,11 +546,13 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "כתוב סיכום ב-50 מילים שמסכם [נושא או מילת מפתח].",
 	"Yesterday": "אתמול",
 	"You": "אתה",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "לא ניתן לשכפל מודל בסיס",
 	"You have no archived conversations.": "אין לך שיחות בארכיון.",
 	"You have shared this chat": "שיתפת את השיחה הזו",
 	"You're a helpful assistant.": "אתה עוזר מועיל.",
 	"You're now logged in.": "כעת אתה מחובר.",
+	"Your account status is currently pending activation.": "",
 	"Youtube": "Youtube",
 	"Youtube Loader Settings": "הגדרות Youtube Loader"
 }
