--- a/src/lib/i18n/locales/nl-NL/translation.json
+++ b/src/lib/i18n/locales/nl-NL/translation.json
@@ -12,6 +12,7 @@
 	"a user": "een gebruiker",
 	"About": "Over",
 	"Account": "Account",
+	"Account Activation Pending": "",
 	"Accurate information": "Accurate informatie",
 	"Active Users": "",
 	"Add": "Toevoegen",
@@ -22,6 +23,7 @@
 	"Add custom prompt": "Voeg een aangepaste prompt toe",
 	"Add Docs": "Voeg Docs toe",
 	"Add Files": "Voege Bestanden toe",
+	"Add memory": "",
 	"Add Memory": "Voeg Geheugen toe",
 	"Add message": "Voeg bericht toe",
 	"Add Model": "Voeg Model toe",
@@ -88,8 +90,10 @@
 	"Chunk Params": "Chunk Params",
 	"Chunk Size": "Chunk Grootte",
 	"Citation": "Citaat",
+	"Clear memory": "",
 	"Click here for help.": "Klik hier voor hulp.",
 	"Click here to": "Klik hier om",
+	"Click here to download user import template file.": "",
 	"Click here to select": "Klik hier om te selecteren",
 	"Click here to select a csv file.": "Klik hier om een csv file te selecteren.",
 	"Click here to select documents.": "Klik hier om documenten te selecteren",
@@ -105,6 +109,7 @@
 	"Concurrent Requests": "Gelijktijdige verzoeken",
 	"Confirm Password": "Bevestig Wachtwoord",
 	"Connections": "Verbindingen",
+	"Contact Admin for WebUI Access": "",
 	"Content": "Inhoud",
 	"Context Length": "Context Lengte",
 	"Continue Response": "Doorgaan met Antwoord",
@@ -122,6 +127,7 @@
 	"Create new secret key": "Maak nieuwe geheim sleutel",
 	"Created at": "Gemaakt op",
 	"Created At": "Gemaakt op",
+	"CSV Import": "",
 	"Current Model": "Huidig Model",
 	"Current Password": "Huidig Wachtwoord",
 	"Custom": "Aangepast",
@@ -207,12 +213,15 @@
 	"Error": "Fout",
 	"Experimental": "Experimenteel",
 	"Export": "Exporteren",
+	"Export All Archived Chats": "",
 	"Export All Chats (All Users)": "Exporteer Alle Chats (Alle Gebruikers)",
 	"Export chat (.json)": "",
 	"Export Chats": "Exporteer Chats",
 	"Export Documents Mapping": "Exporteer Documenten Mapping",
+	"Export LiteLLM config.yaml": "",
 	"Export Models": "Modellen exporteren",
 	"Export Prompts": "Exporteer Prompts",
+	"External Models": "",
 	"Failed to create API Key.": "Kan API Key niet aanmaken.",
 	"Failed to read clipboard contents": "Kan klembord inhoud niet lezen",
 	"Failed to update settings": "",
@@ -224,6 +233,7 @@
 	"Fluidly stream large external response chunks": "Stream vloeiend grote externe responsbrokken",
 	"Focus chat input": "Focus chat input",
 	"Followed instructions perfectly": "Volgde instructies perfect",
+	"Form": "",
 	"Format your variables using square brackets like this:": "Formatteer je variabelen met vierkante haken zoals dit:",
 	"Frequency Penalty": "Frequentie Straf",
 	"General": "Algemeen",
@@ -269,9 +279,11 @@
 	"Light": "Licht",
 	"Listening...": "Luisteren...",
 	"LLMs can make mistakes. Verify important information.": "LLMs kunnen fouten maken. Verifieer belangrijke informatie.",
+	"Local Models": "",
 	"LTR": "LTR",
 	"Made by OpenWebUI Community": "Gemaakt door OpenWebUI Community",
 	"Make sure to enclose them with": "Zorg ervoor dat je ze omringt met",
+	"Manage": "",
 	"Manage Models": "Beheer Modellen",
 	"Manage Ollama Models": "Beheer Ollama Modellen",
 	"Manage Pipelines": "Pijplijnen beheren",
@@ -481,6 +493,7 @@
 	"to": "naar",
 	"To access the available model names for downloading,": "Om de beschikbare modelnamen voor downloaden te openen,",
 	"To access the GGUF models available for downloading,": "Om toegang te krijgen tot de GGUF modellen die beschikbaar zijn voor downloaden,",
+	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "",
 	"to chat input.": "naar chat input.",
 	"Today": "Vandaag",
 	"Toggle settings": "Wissel instellingen",
@@ -532,11 +545,13 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Schrijf een samenvatting in 50 woorden die [onderwerp of trefwoord] samenvat.",
 	"Yesterday": "gisteren",
 	"You": "U",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "U kunt een basismodel niet klonen",
 	"You have no archived conversations.": "U heeft geen gearchiveerde gesprekken.",
 	"You have shared this chat": "U heeft dit gesprek gedeeld",
 	"You're a helpful assistant.": "Jij bent een behulpzame assistent.",
 	"You're now logged in.": "Je bent nu ingelogd.",
+	"Your account status is currently pending activation.": "",
 	"Youtube": "Youtube",
 	"Youtube Loader Settings": "Youtube-laderinstellingen"
 }
