--- a/src/lib/i18n/locales/uk-UA/translation.json
+++ b/src/lib/i18n/locales/uk-UA/translation.json
@@ -12,6 +12,7 @@
 	"a user": "користувача",
 	"About": "Про програму",
 	"Account": "Обліковий запис",
+	"Account Activation Pending": "Активація облікового запису очікує на розгляд",
 	"Accurate information": "Точна інформація",
 	"Active Users": "Активні користувачі",
 	"Add": "Додати",
@@ -22,6 +23,7 @@
 	"Add custom prompt": "Додати користувацьку підказку",
 	"Add Docs": "Додати документи",
 	"Add Files": "Додати файли",
+	"Add memory": "Додати пам'ять",
 	"Add Memory": "Додати пам'ять",
 	"Add message": "Додати повідомлення",
 	"Add Model": "Додати модель",
@@ -59,7 +61,7 @@
 	"Audio": "Аудіо",
 	"August": "Серпень",
 	"Auto-playback response": "Автоматичне відтворення відповіді",
-	"Auto-send input after 3 sec.": "Автоматична відправка через 3 сек.",
+	"Auto-send input after 3 sec.": "Автоматична відправка через 3 сек",
 	"AUTOMATIC1111 Base URL": "URL-адреса AUTOMATIC1111",
 	"AUTOMATIC1111 Base URL is required.": "Необхідна URL-адреса AUTOMATIC1111.",
 	"available!": "доступно!",
@@ -88,8 +90,10 @@
 	"Chunk Params": "Параметри розбиття",
 	"Chunk Size": "Розмір фрагменту",
 	"Citation": "Цитування",
+	"Clear memory": "Очистити пам'ять",
 	"Click here for help.": "Клацніть тут, щоб отримати допомогу.",
 	"Click here to": "Натисніть тут, щоб",
+	"Click here to download user import template file.": "Натисніть тут, щоб завантажити файл шаблону імпорту користувача.",
 	"Click here to select": "Натисніть тут, щоб вибрати",
 	"Click here to select a csv file.": "Натисніть тут, щоб вибрати csv-файл.",
 	"Click here to select documents.": "Натисніть тут, щоб вибрати документи.",
@@ -105,6 +109,7 @@
 	"Concurrent Requests": "Одночасні запити",
 	"Confirm Password": "Підтвердіть пароль",
 	"Connections": "З'єднання",
+	"Contact Admin for WebUI Access": "Зверніться до адміністратора для отримання доступу до WebUI",
 	"Content": "Зміст",
 	"Context Length": "Довжина контексту",
 	"Continue Response": "Продовжити відповідь",
@@ -122,6 +127,7 @@
 	"Create new secret key": "Створити новий секретний ключ",
 	"Created at": "Створено у",
 	"Created At": "Створено у",
+	"CSV Import": "Імпорт CSV",
 	"Current Model": "Поточна модель",
 	"Current Password": "Поточний пароль",
 	"Custom": "Налаштувати",
@@ -207,12 +213,15 @@
 	"Error": "Помилка",
 	"Experimental": "Експериментальне",
 	"Export": "Експорт",
+	"Export All Archived Chats": "Експортувати всі архівні чати",
 	"Export All Chats (All Users)": "Експортувати всі чати (всі користувачі)",
 	"Export chat (.json)": "Експорт чату (.json)",
 	"Export Chats": "Експортувати чати",
 	"Export Documents Mapping": "Експортувати відображення документів",
+	"Export LiteLLM config.yaml": "Експорт LiteLLM config.yaml",
 	"Export Models": "Експорт моделей",
 	"Export Prompts": "Експортувати промти",
+	"External Models": "Зовнішні моделі",
 	"Failed to create API Key.": "Не вдалося створити API ключ.",
 	"Failed to read clipboard contents": "Не вдалося прочитати вміст буфера обміну",
 	"Failed to update settings": "Не вдалося оновити налаштування",
@@ -224,6 +233,7 @@
 	"Fluidly stream large external response chunks": "Плавно передавати великі фрагменти зовнішніх відповідей",
 	"Focus chat input": "Фокус вводу чату",
 	"Followed instructions perfectly": "Бездоганно дотримувався інструкцій",
+	"Form": "Форма",
 	"Format your variables using square brackets like this:": "Форматуйте свої змінні квадратними дужками так:",
 	"Frequency Penalty": "Штраф за частоту",
 	"General": "Загальні",
@@ -269,9 +279,11 @@
 	"Light": "Світла",
 	"Listening...": "Слухаю...",
 	"LLMs can make mistakes. Verify important information.": "LLMs можуть помилятися. Перевірте важливу інформацію.",
+	"Local Models": "Локальні моделі",
 	"LTR": "LTR",
 	"Made by OpenWebUI Community": "Зроблено спільнотою OpenWebUI",
 	"Make sure to enclose them with": "Переконайтеся, що вони закриті",
+	"Manage": "Керувати",
 	"Manage Models": "Керування моделями",
 	"Manage Ollama Models": "Керування моделями Ollama",
 	"Manage Pipelines": "Управління Pipelines",
@@ -483,6 +495,7 @@
 	"to": "в",
 	"To access the available model names for downloading,": "Щоб отримати доступ до назв доступних для завантаження моделей,",
 	"To access the GGUF models available for downloading,": "Щоб отримати доступ до моделей GGUF, які можна завантажити,,",
+	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "Щоб отримати доступ до веб-інтерфейсу, зверніться до адміністратора. Адміністратори можуть керувати статусами користувачів з Панелі адміністратора.",
 	"to chat input.": "в чаті.",
 	"Today": "Сьогодні",
 	"Toggle settings": "Переключити налаштування",
@@ -534,11 +547,13 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Напишіть стислий зміст у 50 слів, який узагальнює [тема або ключове слово].",
 	"Yesterday": "Вчора",
 	"You": "Ви",
+	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "Ви можете персоналізувати свою взаємодію з LLM, додавши спогади за допомогою кнопки «Керувати» нижче, що зробить їх більш корисними та пристосованими до вас.",
 	"You cannot clone a base model": "Базову модель не можна клонувати",
 	"You have no archived conversations.": "У вас немає архівованих розмов.",
 	"You have shared this chat": "Ви поділилися цим чатом",
 	"You're a helpful assistant.": "Ви корисний асистент.",
 	"You're now logged in.": "Ви увійшли в систему.",
+	"Your account status is currently pending activation.": "Статус вашого облікового запису наразі очікує на активацію.",
 	"Youtube": "Youtube",
 	"Youtube Loader Settings": "Налаштування завантажувача Youtube"
 }
